Final Work Day Commit!

--- a/03_jQuery-Test/AfricanVid.html
+++ b/03_jQuery-Test/AfricanVid.html
@@ -930,9 +930,9 @@ A telecourse designed to build understanding of geography by examining eleven re
 <dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/WarriorMarks.html"><i>ABC-CLIO Video Rating Guide for Libraries</i>Ж</dd>
 </dl>
 <dl>
-<dd data-sortby="9">Reviews and articles:</dd>
 </dl>
-<dl>
+<dl><dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Hamilton, Amy. "Warrior Marks." (includes related articles) <i>off our backs</i> v23, n11 (Dec, 1993):2 (5 pages).</dd>
 <dd>â€¢149; Minor, Diane. "Warrior Marks: Joyous Resistance at Walker Film Debut." (documentary film by Alice Walker) <i>National N O W Times</i> v26, n2 (Jan, 1994):7.</dd>
 <dd>â€¢149; Simonds, Cylena. "Missing the Mark." (female mutilation in movie 'Warrior Marks') <i>Afterimage</i> v21, n8 (March, 1994):3.</dd>
