--- a/03_jQuery-Test/EnvidesignVid.html
+++ b/03_jQuery-Test/EnvidesignVid.html
@@ -1965,7 +1965,7 @@ videocassettes, 112 min. <b>Video/C 3196</b></dd>
 </dl>
 <dl>
 <dt><b>Building a Dream.</b></dt>
-<dd>Shows how fourteen families in Oakland, Calif., became the first group of urban dwellers to pioneer a national pilot program of cooperatively built housing. 1981. 24 min. D<b>VD 4554 (preservation copy)  Video/C 323</b></dd>
+<dd>Shows how fourteen families in Oakland, Calif., became the first group of urban dwellers to pioneer a national pilot program of cooperatively built housing. 1981. 24 min. <b>DVD 4554 (preservation copy)  Video/C 323</b></dd>
 </dl>
 <dl>
 <dt><b>Building America: Land Development Issues in the 21st Century.</b></dt>
