--- a/03_jQuery-Test/FilmonVideoVid.html
+++ b/03_jQuery-Test/FilmonVideoVid.html
@@ -6,9 +6,7 @@
 <body>
 <div id="dvData">
 <!--   METADATA using the Dublin Core  -->
- <script language="JavaScript" type="text/javascript">  <!--
-function loadit(form, win) {
-win.location.href = form.menu.options[form.menu.selectedIndex].value  }  // --></script><b>Ж</b>
+ </script><b>Ж</b>
 
 <img src="http://www.lib.berkeley.edu/MRC/film.gif">
 Contents:
