--- a/03_jQuery-Test/Frenchfilm.html
+++ b/03_jQuery-Test/Frenchfilm.html
@@ -3268,7 +3268,7 @@ ois may be the star pupil, but when he gets back to his daily round, countless o
 <dd>â€¢149; Ѭ href="http://www.imdb.com/title/tt0117477/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
-<dd><img src="http://www.lib.berkeley.edu/MRC/blinks.gif"> Ѭ href="http://www.mrqe.com/lookup?ridicule">Movie Review Query EngineЖ</dd>
+<dd>Links to full-text reviews:  Ѭ href="http://www.mrqe.com/lookup?ridicule">Movie Review Query EngineЖ</dd>
 </dl>
 <p>â€¢149;<b>Awards</b></p>
 <dl>
@@ -3870,7 +3870,7 @@ ois may be the star pupil, but when he gets back to his daily round, countless o
 <dd>Directed by Agnes Varda. Cast: Valerie Mairesse, Th&eacute;r&egrave;se Liotard, Robert Dadies, Ali Raffi. A warm and joyous film celebrating the friendship between two women with sharply different personalities. The film follows their lives and friendship over a period of 14 years as each seeks to control her destiny and find contentment. 106 min. <b>vhs 999:3270</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0076855">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 
-<p>Ж</p>
+
 <dl>
 <dt><b>Va savoir</b> (2001)</dt>
 <dd>Director, Jacques Rivette. Cast: Jeanne Balibar, Sergio Castellitto, Marianne Basler, Jacques Bonnaffe, H&eacute;l&egrave;ne de Fougerolles, Bruno Todschini, Catherine Rouvel, Claude Berri. An elegant and charming comedy that follows the romantic misadventures of three men and three woman as they become tangled in each other's lives during the brief run of a play in Paris. 154 min. <b>DVD 1324</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0242994/">Credits and other information from the Internet Movie DatabaseЖ</dd>
@@ -3897,7 +3897,7 @@ ois may be the star pupil, but when he gets back to his daily round, countless o
 <dt><b>La Vall&eacute;e (The Valley)</b> (1972)</dt>
 <dd>Directed by Barbet Schroeder. Cast: Bulle Ogier, Jean-Pierre Kalfon, Michael Gothard, Jerome Beauvarlet, Monique Giraudy, Valerie Lagrange. Set in the rainforest of New Guinea, a restless diplomat's wife goes in search of a rare bird's priceless feathers. In the process she meets up with a group of hippies seeking spiritual and sexual enlightenment. Together they are transformed when they meet the indigenous Mapuga tribesmen and the secret "valley of the gods." 105 min. <b>DVD 1708</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0069451">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<p>Ж</p>
+
 <dl>
 <dt><b>Les Vampires</b> (1916)</dt>
 <dd>Directed by Louis Feuillade. Cast: Musidora, Edouard Mathe, Marcel Levesque, Jean Ayme, Fernand Herrmann, Stacia Napierkowska. 1. The severed head -- 2. The ring that kills -- 3. The red code book -- 4. The spectre -- 5. Dead man's escape -- 6. Hypnotic eyes -- 7. Satanas -- 8. The thunder master -- 9. The poisoner -- 10. The terrible wedding. A legendary 7 hour silent crime serial in 10 episodes describing the achievements of Les Vampires, a secret society of criminals led by Irma Vep. The gang uses kidnapping, poisonous gas, heavy artillery, sexual domination and murder to gain power over the elite of Paris. Special features: Inserted essay: The public is my master, Louis Feuillade and Les Vampires by Fabrice Zagury; For the children: a comedy sketch by the cast and crew of Les Vampires to raise funds for the French war orphans. Directed by Louis Feuillade (1916, 3 min.); Bout-de-Zan and the shirker: a comedy that features the child actor, Bout-De-Zan, from episode 8 of Les Vampires. Directed by Louis Feuillade (1916, 8 min.) 399 min. <b>DVD 285</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0006206/">Credits and other information from the Internet Movie DatabaseЖ</dd>
@@ -4059,7 +4059,7 @@ ois may be the star pupil, but when he gets back to his daily round, countless o
 <dd>Directed by Catherine Breillat. Cast: Charlotte Alexandra, Hiram Keller, Rita Maiden, Bruno Balp, Georges Gueret, Shirley Stoler. Alice has returned home from school for summer vacation and is stifled and bored by country life. She becomes infatuated with a young worker at her father's sawmill and when not lusting after him, she spends her days writing in her diary and dreaming up sexual fantasies. Based on the novel 'The air duct' by Catherine Breillat. 93 min.<b>DVD 7169</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0135024/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<p>Ж</p>
+
 <dl>
 <dt><b>Week-end (Weekend)</b> (1967)</dt>
 <dd>Directed by Jean-Luc Godard. Cast: Mirielle Darc, Jean-Pierre Leaud, Jean Yanne. A middle class couple on a weekend trip get caught up in an armed liberation struggle. A sarcastic portrait of France in 1967. 105 min. <b>DVD 4770; vhs 999:158</b></dd>
@@ -4087,7 +4087,7 @@ ois may be the star pupil, but when he gets back to his daily round, countless o
 <dd data-sortby="9">â€¢149;Ѭ href="http://us.imdb.com/title/tt0053459/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 
-<p>Ж</p>
+
 <dl>
 <dt><b>Zazie dans le m&eacute;tro</b> (1960)</dt>
 <dd>Directed by Louis Malle. Cast: Catherine Demongeot, Philippe Noiret, Annie Fratellini, Vittorio Caprioli, Hubert Deschamps. Demongeot is an 11-year-old nuisance who must spend a few days with her uncle Noriet in Paris after her mother goes off with a new lover. She wants nothing more than to ride the subway but a strike by the Paris Metro workers prevents this. 92 min. <b>DVD 9353 (PAL); vhs 999:3465</b></dd>
