--- a/03_jQuery-Test/Gangsterfilm.html
+++ b/03_jQuery-Test/Gangsterfilm.html
@@ -5204,7 +5204,7 @@ redemption. 103 min. <b>DVD 1083; vhs 999:2693</b></dd>
 information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
-<dd><img src="http://www.lib.berkeley.edu/MRC/blinks.gif"> Ѭ href=
+<dd>Links to full-text reviews:  Ѭ href=
 "http://us.imdb.com/title/tt0119250/">Movie Review Query
 EngineЖ</dd>
 </dl>
