--- a/03_jQuery-Test/IndigenousVid.html
+++ b/03_jQuery-Test/IndigenousVid.html
@@ -5,34 +5,9 @@
 </head>
 <body>
 <div id="dvData">
-
-<img src="http://www.lib.berkeley.edu/MRC/nativeam.gif">
-<dl>
-<dd><img src="http://www.lib.berkeley.edu/MRC/contents.gif" border="0">
-<dl>
-<dd>â€¢149;Ѭ href="#prehistory">Prehistory and ArchaeologyЖ</dd>
-<dd>â€¢149;Ѭ href="#history">History (to 1900)Ж</dd>
-<dd>â€¢149;Ѭ href="#tribes">Documentaries About Specific Tribes and RegionsЖ</dd>
-<dd>â€¢149;Ѭ href="#firstnations">First Nations and Inuit Peoples(Canada and Alaska)Ж</dd>
-<dd>â€¢149;Ѭ href="#contemporary">Contemporary IssuesЖ</dd>
-<dd>â€¢149;Ѭ href="#stereotypes">Images of Indians/stereotypesЖ</dd>
-<dd>â€¢149;Ѭ href="#arts">Arts, Crafts, Dance and SongЖ</dd>
-<dd>â€¢149;Ѭ href="#misc">General and Miscellaneous WorksЖ</dd>
-</dl>
-<br>
-<dd data-sortby="9">See also the following MRC Videographies:</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/LatinAmVid.html">Mexico/Latin AmericaЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/EthnicImagesVid.html">The Movies, Race, and EthnicityЖ for fictional films (westerns, etc.) that present images of Native Americans and various ethnic groups filtered through the lens of Hollywood.</dd>
-</dl>
-<dl>
-<dd data-sortby="9">Related web sites:</dd>
-<dd>â€¢149;Ѭ href="http://www.jfredmacdonald.com/aifg/">American Indian Film GalleryЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.hanksville.org/NAresources/indices/NAvideo.html">Native American Video Resources on the InternetЖ</dd>
-</dl>
-<dl>
-<dd data-sortby="9">Bibliography on this topic: </dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/IndigenousBib.html">Bibliography of books and articles about the representation of Native Americans in the moviesЖ</dd>
-</dl><h3>Prehistory and Archaeology</h3>
+<h1>Indigenous People</h1>
+<h2>North and Central America</h2>
+<h3>Prehistory and Archaeology</h3>
 <dl>
 <dt><b>Archaeology: Questioning the Past</b></dt>
 <dd>Reviews the preparation that students need before they go out on an archaeolgical dig. Includes two sequences of digging--one at an ancient Indian site in northern California and the other at an Anasazi Pueblo site near Mesa Verde National Park, Colorado. Illustrates the full range of archaeological inquiry. c1987. 27 min. <b>Video/C MM641</b></dd>
@@ -111,11 +86,7 @@ Humanity of Ishi: Historical evaluation of Ishi's behavior challenges judgments 
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.berkeleymedia.com/catalog/berkeleymedia/films/native_american_studies/who_owns_the_past">Description from Berkeley Media LLC catalogЖ</dd>
 </dl>
-<dl>
-<dt>Ѭ href="#top">Back To the topЖ</dt>
-<dt><br>
-</dt>
-</dl>
+
 <h3>History (to 1900)</h3>
 <dl>
 <dt><b>Across the Sea of Grass (<i>Land of the Eagle</i>; 4).</b></dt>
@@ -279,7 +250,7 @@ Humanity of Ishi: Historical evaluation of Ishi's behavior challenges judgments 
 <dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/documentarybib.html#rburns">See separate bibliography of reviews and articles about this filmRic Burns bibliographyЖ</dd>
 <dd>â€¢149; <b>Westward, The Course of Empire Takes Its Way.</b> The first episode of the series "The way west." Chronicles the colorful and frantic opening decades of expansion, from the 1840's down through the Civil War. The pioneer movement and then the Gold Rush transformed the destiny of the continent and turned the world of Native Americans upside down. The ever-quickening pace of expansion led to a series of bloody confrontations between Native Americans and whites, culminating in the Minnesota Uprising of 1862, and, two years later, the massacre at Sand Creek. <b>DVD 2580  Video/C 4477</b></dd>
 <dd>â€¢149; <b>The Approach of Civilization.</b> Chronicles the four-year period following the Civil War-- an extraordinarily transformative and disruptive era on the Great Plains, marked by two great climaxes: the triumph, in 1868, of Red Cloud and Crazy Horse over the U.S. Army on the Bozeman Trail, and the joining, in 1869, of the two ends of the transcontinental railroad at Promontory Point in Utah. <b>DVD 2581  Video/C 4478</b></dd>
-<dd>â€¢149; <b>The War for the Black Hills.</b> The third episode of the series "The way west." Follows the dramatic sequence of events that led up to the battle of the Little Big Horn in June of 1876. Financial pressures spurred the United States to invade the Lakotas' sacred Black Hills in search of gold. That treaty violation, together with the systematic extermination of the buffalo, sparked outrage among the Lakota and Cheyenne. The stage was set for a cataclysmic showdown between the United States Army and the tribes of the Northern Plains. D<b>VD 2582  Video/C 4479</b></dd>
+<dd>â€¢149; <b>The War for the Black Hills.</b> The third episode of the series "The way west." Follows the dramatic sequence of events that led up to the battle of the Little Big Horn in June of 1876. Financial pressures spurred the United States to invade the Lakotas' sacred Black Hills in search of gold. That treaty violation, together with the systematic extermination of the buffalo, sparked outrage among the Lakota and Cheyenne. The stage was set for a cataclysmic showdown between the United States Army and the tribes of the Northern Plains. <b>DVD 2582  Video/C 4479</b></dd>
 <dd>â€¢149; <b>Ghost Dance.</b> The fourth and final episode of the series "The way west." Chronicles the oppression of the Native American tribes that occurred in the wake of the Battle of the Little Big Horn; the surrender and last days of Crazy Horse and Sitting Bull; the rise of the heartbreaking Ghost Dance religion; and the last terrible massacre at Wounded Knee. <b>DVD 2583  Video/C 4480</b></dd>
 </dl>
 <dl>
@@ -311,11 +282,7 @@ Humanity of Ishi: Historical evaluation of Ishi's behavior challenges judgments 
 <dd>â€¢149;8: <b>Ghost Dance</b> By the late 1880s, the Americans were astounded by the changes they had brought to the West. Mining towns such as Butte, Montana were now full-fledged industrial cities. Defeated militarily, Native Americans throughout the region now flocked to the call of a Paiute mystic, who offered the illusionary hope that the lost world of the buffalo could be brought back by a Ghost Dance. But its promises would be trampled in the snow and blood of Wounded Knee. In place of the great Native American cultures which once dominated the Plains was a new culture, epitomized by the Oklahoma Land Rush, in which 100,000 eager settlers lined up for a mad dash to stake out a farm and a future.60 min. <b>DVD X1627 Video/C 4526</b></dd>
 <dd>â€¢149;9: <b>One Sky Above Us.</b> As the 20th century neared, Americans celebrated with the World Columbian Exposition, where they were told that the frontier had closed, but in the real West, for every frontier story that ended, another one began. Some Native Americans waged a struggle to hold onto their traditions in the midst of rapid, overwhelming change, while others chose to learn the white man's ways, hoping to help their families and their tribe. In California, the emerging metropolis of Los Angeles waged yet another battle to control the arid region's most precious commodity--water. Much had changed in the West, but it continued to be what it had always been--a landscape of the imagination, the reservoir of our shared hopes and dreams, a place of both conflict and infinite possibility, and an enduring symbol of something unquestionably American. 65 min. <b>DVD X1627 Video/C 4527</b></dd>
 </dl>
-<dl>
-<dt>Ѭ href="#top">Back To the topЖ</dt>
-<dt><br>
-</dt>
-</dl>
+
 <h3>Contemporary Issues</h3>
 <dl>
 <dt><b>Acts of Defiance</b></dt>
@@ -559,11 +526,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dt><b>You Are On Indian Land.</b></dt>
 <dd>Documents the demonstration of Mohawk Indians, living on the St. Regis reserve in Cornwall, Ont., as they protest payment of import duties on personal purchases made in the U.S., claiming exemption under the provisions of the Jay treaty of 1794. Made in collaboration with Noel Starblanket and Mike Mitchell of the Indian Film Crew, and people of the Akwesasne Mohawk Nation. 1969. 37 min. <b>Video/C MM389</b></dd>
 </dl>
-<dl>
-<dt>Ѭ href="#top">Back To the topЖ</dt>
-<dt><br>
-</dt>
-</dl>
+
 <h3>Images of Indians/Stereotypes</h3>
 <dl>
 <dt><b>Images of Indians Series.</b></dt>
@@ -605,11 +568,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dt><b>Return of the Country.</b></dt>
 <dd>Native American and White relationships examined through a series of stereotypical role-playing. 15 min. <b>Video/C 2007</b></dd>
 </dl>
-<dl>
-<dt>Ѭ href="#top">Back To the topЖ</dt>
-<dt><br>
-</dt>
-</dl>
+
 <h3>Documentaries About Specific Tribes and Regions</h3>
 <dl>
 <dt><b>Always for Pleasure.</b></dt>
@@ -617,7 +576,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dd></dd>
 </dl>
 <dl>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/video/7JIBnj_e5BG_H4b-WNBn1w">Clip 2Ж (for Ѭ href="http://www.real.com/realplayer">Real Media playerЖ)</dd>
+<dd data-sortby="9">â€¢149;Ѭ href="http://www.lib.berkeley.edu/video/7JIBnj_e5BG_H4b-WNBn1w">Clip 2Ж (for Ѭ href="http://www.real.com/realplayer">Real Media playerЖ)</dd>
 <dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/video/1iHsnj_e5BGRMYb-WNBn1w">Clip 3Ж (for Ѭ href="http://www.real.com/realplayer">Real Media playerЖ)</dd>
 </dl>
 <dl>
@@ -793,10 +752,8 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 </dl>
 <dl>
 <dt><b>Ishi in Two Worlds: An Interview with Theodora Kroeber</b></dt>
-<dd><br>
-Listen to these recordings with Ѭ href="http://www.real.com/realplayer">Real Media playerЖ</dd>
-</dl>
-<dl><dd>Ѭ href=" http://servlet1.lib.berkeley.edu:8080/audio/stream.play.logic?coll=mrc&filename=tkroeber1.mp3">Part 1Ж</dd>
+<dd>Listen to these recordings with Ѭ href="http://www.real.com/realplayer">Real Media playerЖ DVD 7930</dd>
+<dd data-sortby="9">Ѭ href=" http://servlet1.lib.berkeley.edu:8080/audio/stream.play.logic?coll=mrc&filename=tkroeber1.mp3">Part 1Ж</dd>
 <dd>Ѭ href=" http://servlet1.lib.berkeley.edu:8080/audio/stream.play.logic?coll=mrc&filename=tkroeber2.mp3">Part 2Ж</dd>
 <dd>Ѭ href=" http://servlet1.lib.berkeley.edu:8080/audio/stream.play.logic?coll=mrc&filename=tkroeber3.mp3">Part 3Ж</dd>
 <dd>Ѭ href=" http://servlet1.lib.berkeley.edu:8080/audio/stream.play.logic?coll=mrc&filename=tkroeber4.mp3">Part 4Ж</dd>
@@ -832,7 +789,7 @@ Listen to these recordings with Ѭ href="http://www.real.com/realplayer">Real Me
 </dl>
 <dl>
 <dt><b>The Kiliwa: Hunters and Gatherers of Baja California.</b></dt>
-<dd>Documents aspects of hunting and gathering, food preparation, and shelter construction by a group of Baja California Indians. Illustrates their cultural and ecological adaptation to the high desert country and the impingement of modern technology on traditional modes of subsistence. 14 min. D<b>VD X2353 [preservation copy] Video/C 59</b></dd>
+<dd>Documents aspects of hunting and gathering, food preparation, and shelter construction by a group of Baja California Indians. Illustrates their cultural and ecological adaptation to the high desert country and the impingement of modern technology on traditional modes of subsistence. 14 min. <b>DVD X2353 [preservation copy] Video/C 59</b></dd>
 </dl>
 <dl>
 <dt><b>Lighting the 7th Fire</b></dt>
@@ -1042,11 +999,7 @@ Qaggiq: A Late-winter Inuit Camp in the 1930's. Four families build a qaggiq, a 
 <dt><b>You Are On Indian Land.</b></dt>
 <dd>Documents the demonstration of <b>Mohawk</b> Indians, living on the St. Regis reserve in Cornwall, Ont., as they protest payment of import duties on personal purchases made in the U.S., claiming exemption under the provisions of the Jay treaty of 1794. Made in collaboration with Noel Starblanket and Mike Mitchell of the Indian Film Crew, and people of the Akwesasne Mohawk Nation. 1969. 37 min. <b>Video/C MM389</b></dd>
 </dl>
-<dl>
-<dt>Ѭ href="#top">Back To the topЖ</dt>
-<dt><br>
-</dt>
-</dl>
+
 <h3>First Nations and Inuit Peoples (Canada and Alaska)</h3>
 <dl>
 <dt><b>Between Two Worlds.</b></dt>
@@ -1283,11 +1236,7 @@ Presents major areas where rock art and petroglyphs may be found in California, 
 <dt><b>[Yazzie, Sam] Sam Yazzie, Navaho Singer.</b></dt>
 <dd>A discussion with Sam Yazzie (<b>Navajo</b>) and Charlotte Heth (<b>Cherokee</b>). Yazzie talks about his life and demonstrates traditional Navajo dance music, including the squaw dance. 61 min. <b>Video/C 6302</b></dd>
 </dl>
-<dl>
-<dt>Ѭ href="#top">Back To the topЖ</dt>
-<dt><br>
-</dt>
-</dl>
+
 <h3>General and Miscellaneous Works</h3>
 <dl>
 <dt><b>Ancient Spirit, Living Word.</b></dt>
@@ -1397,16 +1346,6 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dl>
 <dt><b>Inipi, the breath of life: the Native American Sweatlodge Ceremony</b></dt>
 <dd>Tells how and why the Indian sweatlodge is constructed, with commentary by ceremonial leaders of four different tribes: Chickasaw, Dineh (Navajo), Lakota Sioux, and Yaqui-Isleta. The film also provides a soundtrack of traditional songs and the shared wisdom of sweat lodge participants, intercut with beautiful "visions" of the natural landscape of the Southwest. 2003. 20 min. <b>Video/C MM625</b></dd>
-</dl>
-<dl>
-<dt><b>Ishi in Two Worlds: An Interview with Theodora Kroeber</b></dt>
-<dd><br>
-Listen to these recordings with Ѭ href="http://www.real.com/realplayer">Real Media playerЖ</dd>
-</dl>
-<dl><dd>Ѭ href=" http://servlet1.lib.berkeley.edu:8080/audio/stream.play.logic?coll=mrc&filename=tkroeber1.mp3">Part 1Ж</dd>
-<dd>Ѭ href=" http://servlet1.lib.berkeley.edu:8080/audio/stream.play.logic?coll=mrc&filename=tkroeber2.mp3">Part 2Ж</dd>
-<dd>Ѭ href=" http://servlet1.lib.berkeley.edu:8080/audio/stream.play.logic?coll=mrc&filename=tkroeber3.mp3">Part 3Ж</dd>
-<dd>Ѭ href=" http://servlet1.lib.berkeley.edu:8080/audio/stream.play.logic?coll=mrc&filename=tkroeber4.mp3">Part 4Ж</dd>
 </dl>
 <dl>
 <dt><b>Ishi, The Last of the Yahi.</b></dt>
