--- a/03_jQuery-Test/Italianfilm.html
+++ b/03_jQuery-Test/Italianfilm.html
@@ -5,15 +5,8 @@
 </head>
 <body>
 <div id="dvData">
-Ж
-
-<img src="http://www.lib.berkeley.edu/MRC/movital.gif"><b>Titles:</b> Ѭ href="#A">AЖ / Ѭ href="#B">BЖ / Ѭ href="#C">CЖ / Ѭ href="#D">DЖ / Ѭ href="#E">EЖ / Ѭ href="#F">FЖ / Ѭ href="#G">GЖ / Ѭ href="#H">H-JЖ / Ѭ href="#K">K-LЖ / Ѭ href="#M">MЖ / Ѭ href="#N">NЖ / Ѭ href="#O">OЖ / Ѭ href="#P">PЖ / Ѭ href="#Q">Q-RЖ / Ѭ href="#S">SЖ / Ѭ href="#T">TЖ / Ѭ href="#U">U-ZЖ / Ѭ href="#other">Films by Italian Directors (in languages other than Italian)Ж<dl>
-<dt>Bibliography on this topic: </dt>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/italianfilmbib.html">Italian FilmЖ</dd>
-</dl>
+<h1>Italian Cinema</h1>
 <dl>
-<dt><br>
-Ж</dt>
 <dt><b>1860</b> (Italy, 1934/1951)</dt>
 <dd>Directed by Alessandro Blasetti. Cast: Aida Bellia, Giuseppe Gulino, Gianfranco Giachetti, Tot&ograve; Maiorana, Mario Ferrari, Vasco Creti, Cesare Zoppetti, Ugo Gracci. In May 1860, the Sicilians rebelled against and defeated the troops of the King of Naples leading to the unification of Italy. This is a dramatization of the events surrounding the battle of Calatafimi. The use of non-professional actors, actual landscapes, natural light sources, and regional dialects make this epic film a precursor of the neorealism film genre. Contents: DVD 1. 1860 versione restaurata (1934, 74 min.) ; 1860 finale prima versione (1 min.) ; Blaseti parla dei suoi film (interview with Francesco Savio conducted 26 Jan. - 2 Feb., 1974) (22 min) ; Anita Garibaldi / Cineteca del comune di Bologna e Provincia di Ravenna, settore cinema ; regia Mario Caserini ; Cines (1910, tinted, 11 min.) -- DVD 2. 1860: i mille di Garibaldi (1951, 70 min.) ; 1860 (version originale) [recently recovered unrestored 16 mm print ] (1934, 73 min.). 78 min. <b>DVD X3659; vhs 999:1550</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0023729/">Credits and other information from the Internet Movie DatabaseЖ<dl>
@@ -611,7 +604,6 @@
 </dd>
 </dl>
 <dl>
-<dt><b>Fellini's Roma (see: Ѭ href="#roma">RomaЖ)</b></dt>
 <dt><b>Ferdinando e Carolina (Ferdinando and Carolina)</b> (Italy / France, 1999)</dt>
 <dd>Directed by Lina Wertm&uuml;ller. Cast: Sergio Assisi, Gabriella Pession, Nicole Grimaudo. After an arranged marriage, King Ferdinando and Carolina discover that the one thing they have in common is sexual desire. The sovereigns continue to reign, oblivious to the tide of revolution threatening to tear France apart. 108 min. <b>DVD 4418</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0168780/">Credits and other information from the Internet Movie DatabaseЖ<dl>
 <dd data-sortby="9">See also:</dd>
@@ -1055,10 +1047,6 @@
 <dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/italianfilmbib.html#wertmuller">Lina Wertm&uuml;ller bibliographyЖ</dd>
 </dl>
 </dd>
-</dl>
-<dl>
-<dt>Il Miracolo (Italy, 1948)</dt>
-<dd>Directed by Roberto Rossellini. Cast: Anna Magnani, Federico Fellini. SEE Ѭ href="#amore">L'amoreЖ</dd>
 </dl>
 <dl>
 <dt><b>Miracolo a Milano (Miracle in Milan)</b> (1951)</dt>
@@ -1686,10 +1674,6 @@ An early Italian silent era spectacle based on the revolt of the slaves of ancie
 <dd>Pier Paolo Pasolini has a sacred, religious and arcane love towards the masses and, opposite this, a deep hate for the bourgeois. Thirty years has passed since his death, but his words, those he left in the form of verses, songs, stories, tales, films and interviews, even today contain authentic and sacred truths. It is through these words, still annoying, scandalous, atrocious, and sublime, that the authors of this documentary have decided to rediscover the historical value of this poet, of his message and life. Directed by Matteo Cerami e Mario Sesti. In Italian without English subtitles. c2006. 53 min. <b>DVD 9454</b></dd>
 </dl>
 <dl>
-<dt><b>La voce umana</b> (Italy, 1948)</dt>
-<dd>Directed by Roberto Rossellini. Cast: Anna Magnani, Federico Fellini. SEE Ѭ href="#amore">L'amoreЖ</dd>
-</dl>
-<dl>
 <dt><b>We the Living (Noi vivi)</b> (1986)</dt>
 <dd>Directed by Goffredo Alessandrini. Cast: Fosco Giachetti, Alida Valli, Rossano Brazzi, Giovanni Grasso, Emilio Cigoli. In the chaotic years following the Russian revolution, three individuals courageously defy an oppressive, state-controlled society. Kira, torn between two men, struggles with them for the right to live their own lives. We the living is an authorized adaptation of two films, Noi vivi and Addio Kira originally produced, without authorization in Italy in 1942. Film was originally banned by Mussolini and lost since World War II; the film was rediscovered and re-edited from its original 4-hour length and released theatrically in 1988. Special features (Disc 2): Deleted scenes and "We the living, a lost treasure recovered." 174 min. <b>DVD X6340</b></dd>
 <dd>â€¢149; Ѭ href="http://www.imdb.com/title/tt0092194/">Credits and other information from the Internet Movie DatabaseЖ</dd>
@@ -1719,21 +1703,14 @@ An early Italian silent era spectacle based on the revolt of the slaves of ancie
 </dl>
 </dd>
 </dl>
+<h2>Films by Italian Directors in languages other than Italian</h2>
 <dl>
-
-<dt>Ж <b>Films by Italian Directors in languages other than Italian</b>Ж<br>
-</dt>
 <dt><b>The Passenger (Professione: Reporter)</b> (Italy / France / Spain / USA, 1975)</dt>
 <dd>Directed by Michelangelo Antonioni. Cast: Jack Nicholson, Maria Schneider. Day in and day out, TV reporter David Locke endures a world of defeat and hopelessness--the wars and grandstand politics of his public life and the empty monotomy of his marriage. If he could, Locke would walk away from it all and never return. 119 min. <b>DVD X3141; vhs 999:748</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0073580/">Credits and other information from the Internet Movie DatabaseЖ</dd></dl>
 <dl>
 <dt><b>The Truce (Tregua; Reawakening)</b> (Italy / France / Germany / Switzerland, 1996)</dt>
 <dd>Directed by Francesco Rosi (in English). Cast: John Turturro, Rade Serbedzija, Massimo Ghini, Teco Celio, Roberto Citran, Claudio Bisio, Andy Luotto, Agnieszka Wagner and Stefano Dionisi. Tells the true story of humanist Primo Levi and other Italian prisoners liberated from Auschwitz after WWII as they embark on a thousand-mile journey back home to Italy. Along the way, they face great odds but as Primo travels he rediscovers the simply joys of life that the war threatened to destroy forever -- friendship, love, laughter, and most of important of all, a sense of hope. 118 min. <b>DVD 3108</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0117959/">Credits and other information from the Internet Movie DatabaseЖ<br></dd>
 </dl>
-<dl>
-<dt></dt>
-</dl><br>
-Copyright &copy; 1996 by the Library, University of California, Berkeley. <em>All rights reserved.</em><br>
-Document maintained on server: http://www.lib.berkeley.edu/ by<br>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
