--- a/03_jQuery-Test/LaborVid.html
+++ b/03_jQuery-Test/LaborVid.html
@@ -5,32 +5,10 @@
 <body>
 <div id="dvData">
 
-<img src="http://www.lib.berkeley.edu/MRC/labor.gif">
-<p>Contents:</p>
-<dl>
-<dd>â€¢149;Ѭ href="#US">Labor in the USЖ</dd>
-<dd>â€¢149;Ѭ href="#leaders">Labor LeadersЖ</dd>
-<dd>â€¢149;Ѭ href="#latinam">Labor: Latin AmericaЖ</dd>
-<dd>â€¢149;Ѭ href="#easia">Labor: East AsiaЖ</dd>
-<dd>â€¢149;Ѭ href="#sasia">Labor: South/Southeast AsiaЖ</dd>
-<dd>â€¢149;Ѭ href="#europe">Labor: EuropeЖ</dd>
-<dd>â€¢149;Ѭ href="#me">Labor: Middle EastЖ</dd>
-<dd>â€¢149;Ѭ href="#misc">Labor: General and MiscellaneousЖ</dd>
-</dl>
-<p>See also the following MRC Videographies: </p>
-<dl>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/labormovies.html">Labor Themes in the MoviesЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/UShistory.html">US HistoryЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/USPoliticsVid.html">US Politics & GovernmentЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/global.html">Global Issues and EventsЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/global.html">ЖѬ href="http://www.lib.berkeley.edu/MRC/WomenVid.html#workplace">Women's StudiesЖ (for documentaries about Women in the workplace)</dd>
-</dl><dl>
+<h1>Labor and Labor History</h1>
+
 <dt><b>Labor in the USЖ</b></dt>
-</dl>
-<dl>
-<dd data-sortby="9">See also:</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/LatinoVid.html#labor">Latino/Chicano Studies: LaborЖ</dd>
-</dl>
+
 <dl>
 <dt><b>America 1900</b>(parts 3-4)</dt>
 <dd>This program chronicles the forces of change which ultimately shaped the coming century. Part three and four examine the presidential campaign of Fall 1900, the 1900 Paris Exposition, the Boxer Rebellion in China, racism against Afro-Americans, the Galveston hurricane, labor unrest among coal miners resulting in the formation of the United Mine Workers Union, the developing music industry and popular culture at the turn of the century. 92 min. <b>Video/C 5811</b></dd>
@@ -366,7 +344,7 @@
 </dl>
 <dl>
 <dt><b>Harlan County U.S.A.</b></dt>
-<dd>Directed by Barbara Kopple. A docu-drama of the 1973 Kentucky coal miner's strike against the operators of the Brookside mine and the Duke Power Company which resulted from the company's refusal to honor the union's national contract with the United Mine Workers of America. 1976. 103 min. <b>DVD 5665; vhs 999:509</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?0074605">Credits and information from the Internet Movie DatabaseЖ</dd>
+<dd>Directed by Barbara Kopple. A docu-drama of the 1973 Kentucky coal miner's strike against the operators of the Brookside mine and the Duke Power Company which resulted from the company's refusal to honor the union's national contract with the United Mine Workers of America. 1976. 103 min. <b>DVD 5665; vhs 999:509</b>â€¢149;Ѭ href="http://us.imdb.com/title?0074605">Credits and information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <p>â€¢149;<b>Awards & Honors</b></p>
 <dl>
@@ -974,8 +952,8 @@
 </dl>
 <p>â€¢149;Ѭ href="http://sunsite.berkeley.edu/videodir/asx/wrathofgrapes.asx"><b>View this video online</b>Ж <br>
 UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/windowsmedia/default.mspx">Windows Media PlayerЖ or Ѭ href="http://www.microsoft.com/windows/windowsmedia/player/wmcomponents.mspx">Flip4MacЖ</p>
-<dl>
 <dt><b>Labor LeadersЖ</b></dt>
+<dl>
 <dt><b>[Besant, Annie] Annie Besant: An Unlikely Rebel</b></dt>
 <dd>Examines the life and work of British labor union leader, women's rights activist, social reformer and theosophist Annie Besant. Includes the match girls strike of 1888 and other social reform activities throughout her life as a writer and orator. Features archival film footage with commentary by authors and academics. Supplementary feature included on <i>Adventures of young Indiana Jones</i> ; Volume one) c2007. 27 min. <b>DVD X233</b></dd>
 </dl>
@@ -1407,7 +1385,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 </dl>
 <dl>
 <dt><b>Night Mail</b>(1936)</dt>
-<dd>Night mail is the most celebrated documentary of the GPO Film Unit. Showing the Postal Special's nightly run from London to Scotland, it has all the qualities that British documentary stands for from its realism through its perfect structure to the inspirational character appeal. Producer, John Grierson ; directors, Harry Watt & Basil Wright ; music, Benjamin Britten; verse by W. H. Auden. <b>DVD 6240  Video/C 999:524 and Video/C 5024</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0028030/">Information about this film from the Internet Movie DatabaseЖ</dd>
+<dd>Night mail is the most celebrated documentary of the GPO Film Unit. Showing the Postal Special's nightly run from London to Scotland, it has all the qualities that British documentary stands for from its realism through its perfect structure to the inspirational character appeal. Producer, John Grierson ; directors, Harry Watt & Basil Wright ; music, Benjamin Britten; verse by W. H. Auden. <b>DVD 6240  Video/C 999:524 and Video/C 5024</b>â€¢149;Ѭ href="http://us.imdb.com/title/tt0028030/">Information about this film from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
 <dt><b>Poland: We've Caught God by the Arm.</b> (Force More Powerful: A Century of Nonviolent Conflict)</dt>
@@ -1476,7 +1454,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 </dl>
 <dl>
 <dt><b>Enthusiasm (Entuziazm)</b>(1922)</dt>
-<dd>Directed by Dziga Vertov. Vertov's first sound film. This lyrical sound and musical documentary celebrates the enthusiasm with which the peasants and miners of the Don River basin in Russia fulfilled their first five-year plan quotas following the October Revolution. The film is noted for its innovative use of sound in synchronization as well as in counterpoint, and for its interesting cinematic effects, such as multiple superimpositions. 67 min. <b>DVD 9188; vhs 999:2063</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?0021375">Credits and other information from the Internet Movie DatabaseЖ</dd>
+<dd>Directed by Dziga Vertov. Vertov's first sound film. This lyrical sound and musical documentary celebrates the enthusiasm with which the peasants and miners of the Don River basin in Russia fulfilled their first five-year plan quotas following the October Revolution. The film is noted for its innovative use of sound in synchronization as well as in counterpoint, and for its interesting cinematic effects, such as multiple superimpositions. 67 min. <b>DVD 9188; vhs 999:2063</b>â€¢149;Ѭ href="http://us.imdb.com/title?0021375">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
 <dt><b>The Factory and Marketplace Revolution</b>(The Day the Universe Changed; 6)</dt>
@@ -1608,13 +1586,8 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dt><b>Zoned for Slavery: The Child Behind the Label</b></dt>
 <dd>Looks at the operations of off-shore corporations contracted by American businesses, investigating the long and difficult hours that children are working in developing countries to produce brand name American products such as Gitano, Gap, Osh Kosh, and Eddie Bauer. Includes information presented by Charles Kernighan from the National Labor Committee. 1995. 23 min. <b>Video/C MM1000</b></dd>
 </dl>
-<dl>
-<dt>Ѭ href="http://www.lib.berkeley.edu/MRC/level2.html">Ж</dt>
 </dl>
-<br>
-Ѭ href="http://www.lib.berkeley.edu/MRC/leaderpage.html">â€¢149;Ж<br>
-<br>
-Ѭ href="http://www.lib.berkeley.edu/MRC/leaderpage.html">â€¢149;Ж<br>Ѭ href="http://www.lib.berkeley.edu/MRC/commentform.html">The Media Resources Center.Ж<br><p>MRC web graphics by Mary Scott, Graphics Office, The Teaching Library</p></div>
+</dl></dl></div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
 <script src="../exportCSV.js"></script>
