--- a/03_jQuery-Test/LatinAmfilm.html
+++ b/03_jQuery-Test/LatinAmfilm.html
@@ -6,38 +6,11 @@
 <body>
 <div id="dvData">
 
-<h3>Latin American Cinema</h3>
-Contents:
+<h1>Latin American Cinema</h1>
+
+<h2>Mexico / Central America</h2>
+<h3>Mexico</h3>
 <dl>
-<dd>â€¢149; Ѭ href="#MCAC">Mexico / Central AmericaЖ</dd>
-<dd>â€¢149; Ѭ href="#Cuba">Cuba / CaribbeanЖ</dd>
-<dd>â€¢149; Ѭ href="#Other">OtherЖ</dd>
-<dd>â€¢149; Ѭ href="#Argentina">Latin America: ArgentinaЖ</dd>
-<dd>â€¢149; Ѭ href="#Brazil">Latin America: BrazilЖ</dd>
-<dd>â€¢149; Ѭ href="#Chile">Latin America: ChileЖ</dd>
-<dd>â€¢149; Ѭ href="#Colombia">Latin America: ColombiaЖ</dd>
-<dd>â€¢149; Ѭ href="#Peru">Latin America: PeruЖ</dd>
-<dd>â€¢149; Ѭ href="#Venezuela">Latin America: VenezuelaЖ</dd>
-<dd>â€¢149; Ѭ href="#LA-Other">Latin America: OtherЖ</dd>
-</dl>
-<dl>
-<dt><dd data-sortby="9">See also the following MRC Videographies:</dd></dt>
-</dl>
-<dl>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/FilmonVideoVid.html#latin">Film HistoryЖ (for documentaries about Latin American Cinema)</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/spanishculture.html">Spanish History and Culture; Spanish/Latin American LiteratureЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/LatinAmVid.html">Latin America & the Caribbean videographyЖ</dd>
-</dl>
-Bibliography on this topic:
-<dl>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/LatinAmFilmBib.html">Selected Bibliography of Books on Mexican and Latin American CinemaЖ</dd>
-</dl>Ж
-<h2>Mexico / Central America</h2><dl>
-<dt>Unless otherwise noted, all videos are in Spanish with English subtitles.</dt>
-</dl><h3>Mexico</h3><dl>
-<dd data-sortby="9">Related web sites:</dd>
-<dd>â€¢149; Ѭ href="http://www.wam.umd.edu/~dwilt/mfb.html">Mexican Film Resources PageЖ</dd>
-</dl><dl>
 <dt><b>Las abandonadas</b> (Mexico, 1944)</dt>
 <dd>Director, Emilio Fern&aacute;ndez. Cast: Delores del R&iacute;o, Pedro Armend&aacute;riz, V&iacute;ctor Junco, Paco Fuentes, Arturo Soto Rangel, Charles Rooner. A woman abandoned by her husband is obliged to do all kinds of work until she falls into the trap of prostitution. She has a son and manages to bring him up, paying his schooling without him knowing it. At the end, he mistakes her for a beggar and gives her money. In Spanish without English subtitles. 97 min. DVD X4569</dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0036577/">Credits and other information from the Internet Movie DatabaseЖ</dd>
@@ -1617,10 +1590,9 @@ Bibliography on this topic:
 <dt><b>XXY</b>(Argentina / France / Spain, 2007)</dt>
 <dd>Directed by Luc&iacute;a Puenzo. Cast: Ricardo Dar&iacute;n, Valeria Bertuccelli, Germ&aacute;n Palacios, Carolina Pelleritti, Mart&iacute;n Piroyansky, In&eacute;s Efron. The dramatic story of a 15-year-old hermaphrodite, born with what the doctors call 'ambiguous genitalia,' whose parents moved from Buenos Aires to an isolated cabin outside of Piri&aacute;polis, Uruguay, to protect their child from prejudice. Based on the story "Cinismo" by Sergio Bizzio. Special feature: This month's short film : The Pick-up artist / director, Steffen Weinert (13 min., in German with English subtitles). 91 min. <b>DVD X1015</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0995829/">Credits and other information from the Internet Movie DatabaseЖ</dd>
-</dl><h3>Brazil</h3><dl>
-<dt>Unless otherwise noted, all videos are in Portuguese with English subtitles.</dt>
-<dt>SEE ALSO: Ѭ href="http://www.lib.berkeley.edu/MRC/spanishfilm.html#port">Portugese CinemaЖ<br>
-</dt>
+</dl>
+<h3>Brazil</h3>
+<dl>
 <dt><b>Acquaria</b> (Brazil, 2003)</dt>
 <dd>Directed by Flavia Moraes. Cast: D.L. Junior, Sandy Le&aacute;h, Igor Rudoff, Daniel Ribeiro, Wind, Alexandre Borges, Julia Lemmertz, Emilio Orciollo Neto, Milton Goncalves. A futuristic portrayal of the Earth as a dry, waterless planet after many years of mankind's poor treatment of the environment. Sarah and Kim fight to survive in the dangerous landscape, and are constantly searching for the most elusive resource on earth: water. System Details Presented at the International Latino Film Festival held in the San Francisco Bay Area. 103 min. <b>DVD X3793</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0380165/">Credits and other information from the Internet Movie DatabaseЖ</dd>
@@ -2403,14 +2375,6 @@ Bibliography on this topic:
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0476298/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
-<dt>â€¢149;<b>Ida LupinoЖ</b><br>
-Reviews and articles:</dt>
-</dl>
-<dl>
-<dd>â€¢149;"Films by Claudia Llosa." <i>Sight & Sound</i>, Dec2010, Vol. 20 Issue 12, p86-87, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=f3h&AN=55538808&site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
-<dd>â€¢149;Kroll, Juli A. "Between the "Sacred" and the "Profane": Cultural Fantasy in Madeinusa By Claudia Llosa." <i>Chasqui</i> ; nov2009, Vol. 38 Issue 2, p113-125, 13p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=53173096&site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
-</dl>
-<dl>
 <dt><b>Missing</b> (USA, 1982)</dt>
 <dd>Directed by Costa-Gavras. Cast: Jack Lemmon, Sissy Spacek, Melanie Mayron, John Shea. Based on an actual event, the story involves the search by his wife and father for Charles Horman, a young American journalist and filmmaker who disappeared during a South American coup. They are led in circles, up blind alleys and are confronted with lies and false hopes from both U.S. and foreign officials. But they frantically trudge on together until the painful, shattering conclusion. Based on the book : The execution of Charles Horman by Thomas Hauser.<br>
 Special features (Disc 1): Original theatrical trailer (3 min.) -- (Disc 2): Video interview with Costa-Gravas excerpted from the 1982 television news program JA2 20H (3 min.); video interview with Costa-Gravas for the 2006 French DVD release (30 min.); "Joyce Harmon on Missing" interview with the widow of Charles Horman (30 min.); "Producing Missing" interview with producers Edward and Mildred Lewis and Sean Daniel, and author of the source novel Thomas Hauser (18 min.); "1982 Cannes Film Festival" interview with Lemmon, Costa-Gavras, Charles' father Ed Horman, and family friend Terry Simon (20 min.); "Pursuing truth" interview of Peter Kornbluh, director of the National Security Archive's Chile Documentation Project (20 min.); "In honor of Missing" 2002 award ceremony held by the Charles Horman Truth Project for the film (21 min.). 122 min. <b>DVD X496; vhs 999:2008</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0084335/">Credits and other information from the Internet Movie DatabaseЖ</dd>
@@ -2439,19 +2403,7 @@ Special features (Disc 1): Original theatrical trailer (3 min.) -- (Disc 2): Vid
 <dt><b>State of Siege (Etat de siege)</b> (France / West Germany / Italy, 1973)</dt>
 <dd>Directed by Costa Gavras. Cast: Yves Montand, Renato Salvatori, O. E. Hasse. A drama based on the true story of the interrogation and execution of CIA agent Dan Mitrione by urban guerillas, the Tupamoros of Uruguay. Kidnapped by the revolutionaries, Mitrone who had been training the country's police in sophisticated counter-insurgency and torture techniques, was held hostage in exchange for the release of political prisoners. Shot in Chile with the approval of President Allende shortly before his assassination, the film was the first to detail the uglier side of the kind of paramilitary training that the U.S. has often performed for its allies. PAL format tape. 120 min. <b>vhs 999:3237</b><li>â€¢149; Ѭ href="http://us.imdb.com/title/tt0070959">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<dl>
-
-<dt><br>
-Ѭ href="#top">Ж</dt>
-</dl>
-To the top
-<dl>
-<dt></dt>
-</dl><br>
-Copyright &copy; 1996 by the Library, University of California, Berkeley. <em>All rights reserved.</em><br>
-Document maintained on server: http://www.lib.berkeley.edu/ by<br>
-Ѭ href="commentform.html">Gary Handman, Head, Media Resources Center.Ж<br>
-<br></div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
 <script src="../exportCSV.js"></script>
