--- a/03_jQuery-Test/PopcultureVid.html
+++ b/03_jQuery-Test/PopcultureVid.html
@@ -487,7 +487,7 @@ Host, Fred W. Friendly ; moderator, Charles J. Ogletree ; debate participants, R
 </dl>
 <dl>
 <dt><b>Vintage Burlesque Strippers Films</b></dt>
-<dd>Stripper: Famous dancer -- Afromood burlesque -- Co-ed secrets stag film -- Blonde stag film -- Brunette -- Cherry Knight -- Malibu Mermaid [with Adele Doleman] -- Indian love burlesque -- Sheree tiger dance -- Peeping Toms paradise -- Two girl hitchhikers -- Two bells from Virginia -- Chinese joy dance -- Nora -- Betty Howard -- Sandra Storm -- Red-headed riot -- Roxie -- Variety girls -- Dance of desire -- Dance of the doves -- Georgia Southern -- Yvonne Marthay -- Hot number -- Fighten femmes of France. Presents 25 film shorts gleaned from 80 years of vintage erotica of yesteryear featuring nude strippers, burlesque dancers, and stag party crashers. D<b>VD 9761</b></dd>
+<dd>Stripper: Famous dancer -- Afromood burlesque -- Co-ed secrets stag film -- Blonde stag film -- Brunette -- Cherry Knight -- Malibu Mermaid [with Adele Doleman] -- Indian love burlesque -- Sheree tiger dance -- Peeping Toms paradise -- Two girl hitchhikers -- Two bells from Virginia -- Chinese joy dance -- Nora -- Betty Howard -- Sandra Storm -- Red-headed riot -- Roxie -- Variety girls -- Dance of desire -- Dance of the doves -- Georgia Southern -- Yvonne Marthay -- Hot number -- Fighten femmes of France. Presents 25 film shorts gleaned from 80 years of vintage erotica of yesteryear featuring nude strippers, burlesque dancers, and stag party crashers. <b>DVD 9761</b></dd>
 </dl>
 <dl>
 <dt><b>What Do People Do Downtown?</b></dt>
@@ -530,9 +530,9 @@ Host, Fred W. Friendly ; moderator, Charles J. Ogletree ; debate participants, R
 <dd>â€¢149; Ѭ href="http://www.newday.com/films/The_Blinking_Madonna.html">Description of the video from New Day Films catalogЖ</dd>
 </dl>
 <dl>
-<dd data-sortby="9">Reviews and articles:</dd>
 </dl>
-<dl>
+<dl><dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Martin, James. The Blinking Madonna and Other Miracles. (movie reviews) <i>America</i> v176, n21 (June 21, 1997):23.</dd>
 <dd>â€¢149; Garofalo, Denise A. "The Blinking Madonna and Other Miracles." (video recording reviews) <i>Library Journal</i> v122, n9 (May 15, 1997):115 (2 pages).</dd>
 <dd>â€¢149; James, Caryn. "The Blinking Madonna and Other Miracles." (video recording reviews) <i>New York Times</i> v146 (Mon, May 12, 1997):B2(N), C14(L), col 2, 7 col in.</dd>
