--- a/03_jQuery-Test/SocialIssues.html
+++ b/03_jQuery-Test/SocialIssues.html
@@ -1523,9 +1523,9 @@ Host, Fred W. Friendly; moderator, Charles J. Ogletree ; debate participants, Ri
 <dl>
 <dt><b>Waco: The Rules of Engagement.</b></dt>
 <dd>A documentary film about the tragic series of events that occurred outside Waco, Texas in April 1993 in which 4 federal agents were killed along with 86 men, women and children of the Branch Davidian compound. This critical analysis of federal law enforcement gone tragically wrong, examines the need to reinforce the basic precepts of tolerance and freedom upon which American society is built. 1997. 136 min. <b>Video/C 5339</b></dd>
-<dd data-sortby="9">Reviews and articles:</dd>
 </dl>
-<dl>
+<dl><dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Bowman, James. "Waco: the Documentary." <i>American Spectator</i> v30, n8 (August, 1997):68 (2 pages).</dd>
 <dd>â€¢149;Elvin, John. "Waco: The Rules of Engagement." (movie reviews) <i>Insight on the News</i> v14, n9 (March 9, 1998):34.</dd>
 <dd>â€¢149;Holden, Stephen. "WACO: The Rules of Engagement." (movie reviews) <i>New York Times</i> v146 (Fri, June 13, 1997):B13(N), C13(L), col 1, 17 col in.</dd>
