--- a/03_jQuery-Test/WomenVid.html
+++ b/03_jQuery-Test/WomenVid.html
@@ -747,7 +747,7 @@ Contents:
 </dl>
 <dl>
 <dt><b>Leona's Sister Gerri</b></dt>
-<dd>Tells the story of Gerri Santoro, the real person in the police photograph of an anonymous woman collapsed on a motel room floor, dead from an illegal abortion. Reprinted thousands of times on placards, in newspapers, magazines and in books, this image has become a symbol for reproductive freedom. Produced and directed by Jane Gillooly. Dist.: Ѭ href="http://www.newday.com/">New Day Films.Ж 1994. 57 min. D<b>VD 7504 Video/C 5991</b></dd>
+<dd>Tells the story of Gerri Santoro, the real person in the police photograph of an anonymous woman collapsed on a motel room floor, dead from an illegal abortion. Reprinted thousands of times on placards, in newspapers, magazines and in books, this image has become a symbol for reproductive freedom. Produced and directed by Jane Gillooly. Dist.: Ѭ href="http://www.newday.com/">New Day Films.Ж 1994. 57 min. <b>DVD 7504 Video/C 5991</b></dd>
 </dl>
 <dl>
 <dt><b>Mary Ann Glendon.</b></dt>
