--- a/03_jQuery-Test/disabilitymovies.html
+++ b/03_jQuery-Test/disabilitymovies.html
@@ -176,7 +176,7 @@
 <dt><b>Frida</b> (USA / Canada / Mexico, 2002)</dt>
 <dd>Directed by Julie Taymor. Cast: Salma Hayek, Alfred Molina, Valeria Golino, Mia Maestro, Roger Rees, Diego Luna, Geoffrey Rush, Ashley Judd, Antonio Banderas. A dramatization of the life of Mexican artist Frida Kahlo, from her humble upbringing to the worldwide fame and controversy that surrounded both her and her husband, Diego Rivera. Special features: Disc 1: Feature film with commentary by director Julie Taymor; selected scenes commentary with composer Elliot Goldenthal; a conversation with Salma Hayek -- Disc 2: American Film Institute Q&A with director Julie Taymor; Bill Moyers interview with Julie Taymor; Chavela Vargas interview; the voice of Lila Downs; the vision of Frida: with Rodrigo Prieto and Julie Taymor; the design of "Frida": with Felipe Fernandez; the music of "Frida": with Elliot Goldenthal and Salma Hayek; Salma Hayek's recording session; bringing Frida Kahlo's life and art to film: a walk through real locations; portrait of an artist; "Amobea Proteus" visual FX; "The Brothers Quay" visual FX; Frida Kahlo facts. 122 min. <b>DVD 1712</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0120679/">Credits and other information from the Internet Movie DatabaseЖ</dd>
-<dd><img src="http://www.lib.berkeley.edu/MRC/blinks.gif"> Ѭ href="http://www.mrqe.com/lookup?^Frida+(2002)">Movie Review Query EngineЖ</dd>
+<dd>Links to full-text reviews:  Ѭ href="http://www.mrqe.com/lookup?^Frida+(2002)">Movie Review Query EngineЖ</dd>
 </dl>
 <dl>
 <dd data-sortby="9">Reviews and articles:</dd>
@@ -936,7 +936,7 @@
 <dl>
 <dt><b>The Aviator</b> (2004)</dt>
 <dd>Directed by Martin Scorsese. Cast: Leonardo DiCaprio, Cate Blanchett, Kate Beckinsale, John C. Reilly, Alec Baldwin, Alan Alda, Ian Holm, Danny Huston, Gwen Stefani, Jude Law, Adam Scott, Matt Ross, Kelli Garner, Frances Conroy, Brent Spiner, Stanley DeSantis, Edward Herrmann, Willem Dafoe. Follows the life of Howard Hughes as the twentysomething millionaire, having already made a fortune improving the design of oil-drilling bits, who comes to Hollywood with an interest in getting into the picture business. Hughes suffered from obsessive-compulsive disorder (OCD), and "The Aviator" shows him exhibiting some symptoms of that neuropsychiatric condition. Disc 2 of the DVD set contains bonus materials, including a 14-minute documentary entitled "The Affliction of Howard Hughes: Obsessive-Compulsive Disorder." 170 min. <b>DVD 3996</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0073114/">Credits and other information from the Internet Movie DatabaseЖ</dd>
-<dd><img src="http://www.lib.berkeley.edu/MRC/blinks.gif"> Ѭ href="http://www.mrqe.com/lookup?^Aviator,+The+(2004)">Movie Review Query EngineЖ</dd></dl>
+<dd>Links to full-text reviews:  Ѭ href="http://www.mrqe.com/lookup?^Aviator,+The+(2004)">Movie Review Query EngineЖ</dd></dl>
 <dl>
 <dt><b>Awakenings</b> (1990)</dt>
 <dd>Directed by Penny Marshall. Cast: Robert De Niro, Robin Williams, John Heard, Julie Kavner, Penelope Ann Miller, Max Von Sydow. Based on a true story, Robin Williams plays a research physician who uses an experimental drugo (Dopa) to "awaken" the catatonic victims of a rare disease. Based on the book: Awakenings by Oliver Sacks. 120 min. <b>DVD 7927</b></dd>
