--- a/03_jQuery-Test/germanculture.html
+++ b/03_jQuery-Test/germanculture.html
@@ -11,35 +11,9 @@
 <body>
 <div id="dvData">
 
-<b>German History and Culture</b>Ж
-<dl>
-<dt>Contents:</dt>
-</dl>
-<dl>
-<dd>â€¢149; Ѭ href="#history"><b>History and Culture:</b>Ж</dd>
-</dl>
-<dl>
-<dd>Ѭ href="#arts">Architecture, Art, Music, DanceЖ</dd>
-<dd>Ѭ href="#life">History and LifeЖ</dd>
-<dd>Ѭ href="#war">World Wars I and IIЖ</dd>
-</dl>
-<dl>
-<dd>â€¢149; Ѭ href="#literature"><b>Literature:</b>Ж</dd>
-</dl>
-<dl>
-<dd>Ѭ href="#bio">Literary Biography and CriticismЖ</dd>
-<dd>Ѭ href="#works">Literary and Theatrical WorksЖ</dd>
-</dl>
-<dl>
-<dt><dd data-sortby="9">See also the following MRC Videographies:</dd></dt>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/Germanfilm.html">German cinema in the Media Resources CenterЖ</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/EuroVid.html">Europe/Eastern Europe videographyЖ</dd>
-</dl>
-<h3>German History and Culture</h3>
-<br>
-Ж | Ѭ href="#arch">ArchitectureЖ | Ѭ href="#art">ArtЖ | Ѭ href="#music-dance">Music and DanceЖ |<br>
-Ж
-<h3>Architecture</h3>
+<h1>German History and Culture</h1>
+
+<h2>Architecture</h2>
 <dl>
 <dt><b>Air, light, and Utopia</b></dt>
 <dd>Examines the Modern Movement in architecture, from its emergence after World War I until World War II. Combines interviews with leading architects, historians, and conservationists with location footage from all over Europe. The first half explores the movement's origins and ideology, spotlighting the Bauhaus in Germany, Le Corbusier in France, the Functionalists in Holland, and the Constructivists in Russia. The second half traces the movement's growth and spread, emphasizing the influence of the social climate and political environment of the interwar years upon building design. 1994. 53 min. Video/C 7212</dd>
@@ -47,9 +21,9 @@
 <dl>
 <dt><b>Architecture Of Doom.</b></dt>
 <dd>Building upon the Nazi cult of the extreme aesthetic which aspired to return beauty to the world, film examines Hitler's eccentric cultural ambitions for the Third Reich, and the profound influence his obsession -- and personal failures -- with art played in the development of the Nazi Party. Film examines Hitler's propaganda which created a social climate which made brutality and murder an acceptable means to beautify the world. 1989. 119 min. DVD 453; also on VHS Video/C 3501<br>
-<dd data-sortby="9">Full-text review from:</dd>
 </dl>
 <dl>
+<dd data-sortby="9">Full-text review from:</dd>
 <dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/VideoLibrarian.html#ArchitectureofDoom"><i>Video Librarian</i>Ж</dd>
 </dl>
 <dl>
@@ -116,9 +90,8 @@
 <dt><b>Zwinger, Sempergalerie.</b></dt>
 <dd>Presents 2 segments from a German television news magazine. Part 1 looks at several examples of organic architecture in German cities. Part 2 visits Dresden and one of the most famous late baroque buildings, the Zwinger Semper Gallery. 27 min. Video/C 8096</dd>
 </dl>
+<h2>Art</h2>
 <dl>
-<dt>ArtЖ<br>
-</dt>
 <dt><b>Albrecht Durer</b></dt>
 <dd>Albrecht Durer (1471-1528) was born in Nuremberg, the son of a goldsmith. Even though he displayed artistic talents at an early age, his father insisted on his learning the craft of a goldsmith before allowing him to turn to art. The film illustrates Durer's life and his artistic development. 1995. 20 min. Video/C 8106</dd>
 </dl>
@@ -210,11 +183,8 @@
 <dt><b>ZKM/Centre for Art and Media Technology, Karlsruhe</b></dt>
 <dd>Presents 2 segments from a German television news magazine. Part 2 takes a visit to the Centre for Art and Media Technology in Karlsruhe, the first museum in Germany to devote itself entirely to art and the electronic media. (Part 1, The Reliable Half-day Elementary School, examines the educational innovation of the "reliable half day primary school" in Germany.) 1998. 27 min. Video/C 8274</dd>
 </dl>
+<h2>Music and Dance</h2>
 <dl>
-<dt><br>
-Ж</dt>
-<dt>Music and Dance<br>
-</dt>
 <dt><b>Ansichten Uber die Liebe die Macht und den Tod: Der Choreograph Kurt Jooss (1901-1979) (Studies of Love, Power and Death: The Choreographer Kurt Jooss (1901-1979).</b></dt>
 <dd>Contents: Performances: Grosstadt (Big city) -- La table verte (Green table). A biography of German choreographer Kurt Jooss, including his contemporary, Sigurd Leeder. Contains interviews with Jooss and excerpts from performances of his ballets which express a social conscience and commentary on today's society. In German with English voiceovers. Videocassette release of a film originally produced in the 1970's. 44 min. Video/C 5170</dd>
 </dl>
@@ -259,7 +229,8 @@ This first film by choreographer Pina Bausch reflects her method of working as d
 <dl>
 <dt><b>What do Pina Bausch and her dancers do in Wuppertal? (Was Tun Pina Bausch und Ihre Tanzerin in Wuppertal?)</b></dt>
 <dd>Performer: Danced by the Wuppertaler Tanztheater: Malou Airaudo, Jacob Andersen, Anne Marie Benati, Ulrich Bergfelder, Benedicte Billiet, Matthias Burkert, Marion Cito, Jo-Anne Endicott, Mechthild Grossmann, Urs Kaufmann, Ed Kortlandt, Beatrice Libonati, Anne Martin, Jan Minarik, Nazareth Panadero, Helena Pikon, Hans Pop, Isabel Ribas Serra, Arthur Rosenfeld, Monika Sagon, Jean-Laurent Sasportes, Janusz Subicz, Meryl Tankard, Christian Trouillas, Francis Viet, Vitus Zeplichal. Documentary on choreographer Pina Bausch and the Wuppertaler Tanztheater, filmed in the course of rehearsals for a new work, Walzer. Selected days of rehearsal, presented with a minimum of interpretive narration, show Bausch and the company working on creative exercises as the piece gradually takes shape. Performance and rehearsal footage of an earlier work, Bandoneon, are seen at the opening of the documentary. In order to create a sense of the general milieu of Wuppertal, the filmmakers also include scenes of the town, interviews with factory workers, and a pre-recorded reading by German writer Peter Weiss. Recorded in Wuppertal, Germany, in spring 1982. 115 min. Video/C 5408</dd>
-</dl><h3>History and Life</h3>
+</dl>
+<h2>History and Life</h2>
 <dl>
 <dt><b>100 Deutsche Jahre (Germany: A Hundred Years)</b></dt>
 <dd>Thirty nine segments of a television program covering various aspects of life in Germany in the 20th century. Contents: Mobilmachungen: Deutschen und das auto -- Wasserzeichen: Deutschen und das Meer -- Flugnummern: Deutschen in der Luft -- Licht-Spiele: Deutschen und das Kino -- Liedgut: Deutschen und ihre Schlager -- Flimmerkisten: Deutschen und das Fernsehen -- Fluchtpunkte: Deutsche in den USA und Israel -- Abgrenzungen: Auslander in Deutschland -- Frontlinien: Deutschen und der Krieg -- Weibsbilder: Frauen in Deutschland -- Mannsbilder: Manner in Deutschland -- Offentliche Erregungen: Deutschen und der sex -- Beziehungskisten: Deutschen und ihre familie -- Kinderstuben: Deutschen und ihr Nachwuchs -- Zapfenstreich: Deutschen und ihre Soldaten -- Un-Heil: Deutschen, die Medien und der Fuhrer -- Auschwitz: Das Deutsche Verbrechen -- Grosse Bruder: Deutschen und die Supermachte -- Volkes Stimme: Demokratie in Deutschland -- Zwei Zimmer, Kuche, Bad: Wohnen in Deutschland. ModeMaschen: Deutschen und ihre Kleidung -- Mahlzeit: Deutschen und ihre Kuche -- Umgangsformen : Deutschen und der gute Ton -- Lehrjahre: Deutshcen und die Schule -- Aufbruche, Ausbruche: Jugendkulturen in Deutschland -- Geordnete Verhaltnisse: Deutschen und die Staatsgewalt -- Zukunftstraume: Deutschen und der Fortschritt -- Gottvertrauen: Deutschen und ihr Glaube -- Hauptsache Nebensache: Deutschen unde die Freizeit -- Zweite Heimat: Deutschen im Verein -- Siegertypen: Deutschen und der Sport -- Friedliche Eroberungen: Deutsche Urlaubstraume --Bilderwelten: Deutschen und ihre Erinnerungen -- Herrschafts Zeiten: Adel in Deutschland -- Schichtwechsel: Industriearbeiter in Deutschland -- Nervensachen: Deutschen unterLeistungsdruck -- Krankheitsbilder: Deutschen und die Gesundheit -- Natur-Gefuhle: Deutschen und der Wald -- Bodenhaftung: Deutschen und die Landwirtschaft. 1999. In German. 12 videocassettes: 29 min. each. Video/C 8066</dd>
@@ -439,7 +410,7 @@ This first film by choreographer Pina Bausch reflects her method of working as d
 <dt><b>Zeugen des Jahrhunderts--Kopfe der Republik : 50 Jahre Grundgesetz</b></dt>
 <dd>Live interviews (in German) with German and foreign political leaders who were witnesses of German history since 1945. <b>Contents</b>: Pt. 1. Theodor Eschenburg -- Rudolf Augstein -- Axel Springer -- Pt. 2. Richard von Weizsacker -- Willy Brandt -- Hildegard Hamm-Brucher. -- Pt. 3. Albrecht Schonherr -- Heinrich Albertz -- Kurt Masur -- Pt. 4. Friedrich W. Christians -- Reinhard Mohn -- Carl Friedrich von Weizsacker. In German. 1999. 220 min. Video/C 8271</dd>
 </dl>
-<h3>East Germany</h3>
+<h2>East Germany</h2>
 <dl>
 <dt><b>Changing Berlin: Changing Europe.</b>(<i>Human Geography, People Places and Change</i>; 9)</dt>
 <dd>Many of the issues that Germany and eastern Europe now confront are seen in microcosm in Berlin. Film examines the history of the city of Berlin, including the social, economic and political changes which have resulted since the fall of the Berlin Wall. 27 min. Video/C 4249</dd>
@@ -517,11 +488,7 @@ This first film by choreographer Pina Bausch reflects her method of working as d
 <dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/PACSVid.html">Peace and Conflict StudiesЖ (for general works on WWI and WWII)</dd>
 <dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/JewishVid.html">Jewish StudiesЖ (for works on the Holocaust)</dd>
 </dl>
-<dl>
-
-<dt><br>
-</dt>
-</dl><h3>Literature</h3><h3>Literary and Theatrical Works</h3>
+<h2>Literary and Theatrical Works</h2>
 <dl>
 <dt><b>Bachmann, Ingeborg</b></dt>
 <dt><b>Das Gebell: Zwei Folgen gelesen von Imogen Kogge; Alles: Zwei Folgen gelesen von Rolf Becker.</b></dt>
@@ -871,7 +838,8 @@ This first film by choreographer Pina Bausch reflects her method of working as d
 <dt><b>Zweig, Stefan</b></dt>
 <dt><b>Schachnovelle</b></dt>
 <dd>A brief commentary on the life and literature of the German author Carl Zuckmayer, followed by a dramatic reading from his work. In German. 155 min. Video/C 8561</dd>
-</dl><h3>Literary / Film Biography and Criticism</h3>
+</dl>
+<h2>Literary / Film Biography and Criticism</h2>
 <dl>
 <dt><b>Dichtung und Freiheit: Die Literatur des Jungen Deutschland.</b></dt>
 <dd>The film describes the literature of the "Junges Deutschland", the period between 1815 and 1848, framed in the story of a young American woman whose ancestors belonged to this era, which she is in the process of discovering. Major emphasis is given to Heinrich Heine and Georg Buchner and their works. 1999. 30 min. Video/C 8576</dd>
