--- a/03_jQuery-Test/global.html
+++ b/03_jQuery-Test/global.html
@@ -6,16 +6,7 @@
 <body>
 <div id="dvData">
 
-<h2>Global & Human Rights Issues and Events</h2>
-<dd data-sortby="9">See also:</dd>
-<dl>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/VideographyMenu.html#area">MRC Area Studies videographiesЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/terrorism.html">International terrorismЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/PACSVid.html">Peace & Conflict StudiesЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/business.html">Business and EconomicsЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/WomenVid.html">Women and Gender StudiesЖ (for international women's issues and welfare)</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/childwelfare.html">International Child Welfare IssuesЖ (separate page)</dd>
-</dl>
+<h1>Global & Human Rights Issues and Events</h1>
 <dl>
 <dt><b>1-800-INDIA</b></dt>
 <dd>Over the past decade, India has emerged as the leader in the global market for white-collar "outsourcing" jobs-- a notable component of India's rapid economic growth. This documentary explores the experience of young Indian men and women who have been recruited into these new jobs requiring long hours, night shifts, and westernized work habits. Also reveals the human and cultural effect on Indian family life, the evolving cities and towns, and on the aspirations and daily lives of young Indians, especially women, entering the work force. Dist.: Ѭ href="http://www.films.com">Films Media Group.Ж Originally broadcast on PBS television program Wide angle on Sept. 13, 2005. 57 min. <b>DVD 6570</b></dd>
@@ -1100,11 +1091,7 @@ Kidney theft in a modern private hospital: Recounts the theft of a kidney from a
 <br>
 </dd>
 </dl>
-<dl>
-<dt></dt>
-</dl>
-<br>Ѭ href="commentform.html">Gary Handman, Head, Media Resources Center.Ж<br>
-<br></div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
 <script src="../exportCSV.js"></script>
