--- a/03_jQuery-Test/imagesarabs.html
+++ b/03_jQuery-Test/imagesarabs.html
@@ -4,19 +4,9 @@
 </head>
 <body>
 <div id="dvData">
-Ж
-
-<h3>The Movies, Race, and Ethnicity: Images of Arabs and the Middle East</h3><h2>This is a static page that is no longer maintained</h2>
-<dd data-sortby="9">See also the following MRC Videographies:</dd>
+<h1>The Movies, Race, and Ethnicity</h1>
+<h2>Images of Arabs and the Middle East</h2>
 <dl>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/MidEastVid.html">The Middle EastЖ (documentary works)</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/MidEastfilm.html">Middle Eastern cinemaЖ</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/imagesjews.html">The Movies, Race, and Ethnicity: JewsЖ</dd>
-</dl>
-<dl>
-<dd data-sortby="9">Bibliography on this topic: </dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/arabbib.html">Arabs in FilmЖ</dd>
-</dl><dl>
 <dt><b>Abdul the Damned</b> (UK, 1935)</dt>
 <dd>Directed by Karl Grune. Cast: Fritz Kortner, Adrienne Ames. "In 1908, Sultan Abdul Hamid rules the Turkish Empire, but he is faced with the threat of revolt by the Young Turk party. He allows Hilmi Pasha, the leader of the Young Turks, to return from exile and form the country's first constitutional government. With tensions still growing, chief of police Kadar Pasha assassinates Hassan Bey, the leader of the Old Turk party, and makes it look as if a Young Turk committed the crime, in order to give Abdul an excuse for arresting the Young Turk leaders. Meanwhile, Abdul becomes infatuated with a visiting Austrian singer. When she rejects his advances, she endangers both herself and her fianc&eacute;, a Turkish officer who also knows who really shot Hassan Bey." [Ѭ href="http://us.imdb.com/title/tt0026032/plotsummary">IMDBЖ] 111 min. <b>DVD 4118</b><li>â€¢149; Ѭ href="http://us.imdb.com/title/tt0026032/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
@@ -697,11 +687,7 @@
 <dd>Directed by Kenneth Glenaan. Cast:Archie Panjabi, Renu Setna, Steve Jackson, Syed Ahmed, Shahid Ahmed. In this drama set before and after the events of 9/11, a young Muslim woman living in Britain campaigns for the release of her immigrant husband from his detainment in a holding centre. After September 11th, the prejudice she experiences in her job and the treatment of common people forces her to reevaluate her life and take sides. 81 min. <b>DVD X5377</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0420333/">Credits and other information from the Internet Movie DatabaseЖ<br></dd>
 </dl>
-<dl>
-<dt></dt>
-</dl>
-Ѭ href="http://www.lib.berkeley.edu/MRC/leaderpage.html">â€¢149;<br>
-Ж </div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
 <script src="../exportCSV.js"></script>
