--- a/03_jQuery-Test/imageseuropeans.html
+++ b/03_jQuery-Test/imageseuropeans.html
@@ -6,36 +6,9 @@
 </head>
 <body>
 <div id="dvData">
-Ж
+<h1>The Movies, Race, and Ethnicity</h1>
+<h2>Immigrants from Europe and Scandinavia</h2>
 
-<h3>The Movies, Race, and Ethnicity:<br>
-Immigrants from Europe and Scandinavia</h3><h2>This is a static page that is no longer maintained</h2>
-Contents:
-<dl>
-<dd>â€¢149; Ѭ href="#easteuro">Eastern European AmericansЖ</dd>
-<dd>â€¢149; Ѭ href="#irish">Irish AmericansЖ</dd>
-<dd>â€¢149; Ѭ href="#italians">Italian AmericansЖ</dd>
-<dd>â€¢149; Ѭ href="#scandia">Scandinavian AmericansЖ</dd>
-<dd>â€¢149; Ѭ href="#westeuro">Western and Southern EuropeЖ</dd>
-</dl>
-<dl>
-<dd data-sortby="9">See also:</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/imagesjews.html">The Movies, Race, and Ethnicity: Images of Jews in Motion PicturesЖ</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/euroimmigrants.html">The Movies, Race, and Ethnicity: Immigrants within EuropeЖ</dd>
-</dl>
-<dl>
-<dd data-sortby="9">See also:</dd>
-<dd>â€¢149;Carr, Steven Alan. "From Street Scene to Dead End: Hollywood and the Urban Ethnic Imigrant [Immigrant], 1931-1937." In: <b>La memoire des villes = The memory of cities</b> Saint-Etienne : Publications de l'Universite de Saint-Etienne, 2003. (ENVI: PN56.C55 M46 2003)</dd>
-<dd>â€¢149;Clapp, James A. " Streets of Gold: Immigrants in the City and the Cinema." <i>Visual Anthropology</i>; Jan/Feb2009, Vol. 22 Issue 1, p1-19, 19p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=35713437&site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
-<dd>â€¢149;Cort&eacute;s, Carlos. "The Immigrant in Film: Evolution of an Illuminating Icon." In: <b>Beyond the stars: Vol 1. / edited by Paul Loukides and Linda K. Fuller.</b>Bowling Green, Ohio : Bowling Green University Popular Press, 1990- (Main Stack PN1995.9.C36.B49 1990; Moffitt PN1995.9.C36.B49 1990)</dd>
-<dd>â€¢149;Davies, Jude. <b>Gender, ethnicity and sexuality in contemporary American film</b> (MAIN: PN1995.9.S45 D38 2000; ETHN: PN1995.9.S45 D38 2000)</dd>
-<dd>â€¢149;<b>Unspeakable images : ethnicity and the American cinema</b> Edited by Lester D. Friedman. Urbana : University of Illinois Press, c1991. (MAIN: PN1995.9.M56 U57 1991; MOFF: PN1995.9.M56 U57 1991; ETHN: PN1995.9.M56 U57 1991; PFA : PN1995.9.M56 U57 1991)</dd>
-<dd>â€¢149;<b>Within our gates : ethnicity in American feature films, 1911-1960</b> Alan Gevinson, editor. Berkeley, Ca. : University of California Press, 1997. (DREF: PN1995.9.M56 W58 1997; ETHN: PN1995.9.M56 W58 1997)</dd>
-</dl><dl>
-<dt><b>The Immigrant</b> (1917)</dt>
-<dd>Director, Charlie Chaplin. " Charlie is on his way to the USA. He wins in a card game, puts the money in Edna's bag (she and her sick mother have been robbed of everything). When he retrieves a little for himself he is accused of being a thief. Edna clears his name. Later, broke, Charlie finds a coin and goes into a restaurant. There he finds Edna, whose mother has died, and asks her to join him. When he reaches for the coin to pay for their meals it is missing (it has fallen through a hole in his pocket)." (from Internet Movie Database) <b>DVD 8</b></dd>
-<dd>â€¢149; Ѭ href="http://us.imdb.com/Title?Immigrant,+The+(1917)">Credits and other information from the Internet Movie DatabaseЖ</dd>
-</dl>
 <h3>Eastern Europeans</h3>
 <dl><dd data-sortby="9">Reviews and articles:</dd><dd>â€¢149; Erens, Patricia "Stellaaaaaa......!!!!!!!!!!: the Slavic stereotype in America film." In: <b>The Kaleidoscopic lens : how Hollywood views ethnic groups</b> / edited by Randall M. Miller Englewood, N.J. : Ozer, c1980 (Main Stack PN1995.9.M56.K3; Moffitt PN1995.9.M56.K3)</dd>
 <dd>â€¢149; Kusielewicz, Eugene. "Polish stereotypes in American film and television." In: <b>Ethnic images in American film and television</b> / edited by Randall M. Miller. Philadelphia: Balch Institute, 1978. Public papers in the humanities ; public paper no. 1(Moffitt PN1995.9.M56.E86)</dd>
@@ -116,17 +89,6 @@ Contents:
 <dd>Directed by Yefim Gribov. Cast: Cast: Dima Davydov, Lyubov Rumyantseva, Semen Strugachev, Vadim Danilevsky, Danuta Slavgorodskaia. In this Russian comedy, set at the turn-of-the-century, a Russian Jewish family Leaves Russia to find a new life in the New World. Seen through the eyes of 11-year-old Motl, he creates a sense of wonder and chaotic adventure as his family makes their way towards America. 82 min. <b>DVD X6882; vhs 999:3277</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?0230552">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <h3>Irish</h3>
-<dl>
-<dt><dd data-sortby="9">See also:</dd></dt>
-</dl>
-<dl>
-<dd>â€¢149; Brennan, William J. "The Irish in American film and television." In: <b>Ethnic images in American film and television</b> / edited by Randall M. Miller. Philadelphia: Balch Institute, 1978. Public papers in the humanities ; public paper no. 1 (Moffitt PN1995.9.M56.E86)</dd>
-<dd>â€¢149; Clark, Dennis J. "The Irish in the movies : a tradition of permanent blur." In: <b>Ethnic images in American film and television</b> / edited by Randall M. Miller. Philadelphia: Balch Institute, 1978. Public papers in the humanities ; public paper no. 1 (Moffitt PN1995.9.M56.E86)</dd>
-<dd>â€¢149; Curran, Joseph M. <b>Hibernian green on the silver screen : the Irish and American movies</b> / Joseph M. Curran. New York : Greenwood Press, c1989. Contributions to the study of popular culture ; no. 23 (Main Stack PN1995.9.I67.C871 1989; Moffitt PN1995.9.I67.C87 1989)</dd>
-<dd>â€¢149; Golden, Sembroff "Hollywood and Hibernia: the Irish in the movies." In: <b>The Kaleidoscopic lens : how Hollywood views ethnic groups</b> / edited by Randall M. Miller Englewood, N.J. : Ozer, c1980 (Main Stack PN1995.9.M56.K3; Moffitt PN1995.9.M56.K3)</dd>
-<dd>â€¢149; Lourdeaux, Lee. <b>Italian and Irish filmmakers in America : Ford, Capra, Coppola, and Scorsese</b> / Lee Lourdeaux. Philadelphia : Temple University Press, 1990. (Main Stack PN1995.9.C35.L68 1990; Moffitt PN1995.9.C35.L68 1990)</dd>
-<dd>â€¢149; Moloney, Mick "Stereotypes in the media : the Irish-American case." In: <b>Ethnic images in American film and television</b> / edited by Randall M. Miller. Philadelphia: Balch Institute, 1978. Public papers in the humanities ; public paper no. 1 (Moffitt PN1995.9.M56.E86)</dd>
-</dl>
 <dl>
 <dt><b>Angels With Dirty FacesЖ</b> (1938)</dt>
 <dd>Directed by Michael Curtiz; starring James Cagney, Pat O'Brien, Humphrey Bogart, Ann Sheridan, George Bancroft, the "Dead End" Kids (Bowery Boys). Two childhood friends grow up and go their separate ways--one a criminal and the other a parish priest. Rocky Sullivan returns to his old neighborhood to find his lawless life style idolized by the young hoodlums there. Jerry Connelly, the parish priest sees his hard work turn unavailing because of Rocky's corruptive influence. "Cagney in 'Public Enemy,' [MRC vhs 999:33] 'Angels With Dirty Faces', and 'The Roaring Twenties' [MRC vhs 999:853] was the archetypal lawless urban Irish thug, whom prejudiced opinion was only too ready to associate with all of the Irish. Only the Italians has suffered as much in this area..." (Dennis Clark and Willian Lynch. "Hollywood and Hibernia: The Irish in Movies." In <i>The Kaleidoscopic Lens: How Hollywood Views Ethnic Groups</i>. Edited by Randall M. Miller. Englewood, N.J.: Ozer, c1980. pp. 98-113). 97 min. <b>DVD 3512; vhs 999:755</b><li>â€¢149; Ѭ href="http://us.imdb.com/title/tt0029870/">Credits and other information from the Internet Movie DatabaseЖ<br>
@@ -338,14 +300,11 @@ Contents:
 </dl>
 <dl>
 <dt><b>Marx Brothers</b></dt>
-<dd>Including, of course, Chico's inimitably, over-the-top characature of a characature of an Italian. The Marx Brothers particularly anarchic comedy, with its elements of vaudeville and Yiddish theater schtick, can be read as a goofy metaphor for the "messy" entry of early century immigrants into established American culture.<br>
-<dd data-sortby="9">See also the following MRC Videographies:</dd></dd>
+<dd>Including, of course, Chico's inimitably, over-the-top characature of a characature of an Italian. The Marx Brothers particularly anarchic comedy, with its elements of vaudeville and Yiddish theater schtick, can be read as a goofy metaphor for the "messy" entry of early century immigrants into established American culture.<br>DVD 5581
+</dd>
 </dl>
 <dl>
-<dd>â€¢149; MRC'sѬ href="http://www.lib.berkeley.edu/MRC/Comedyfilm.html">Comedy videographyЖ for other Marx Brothers titles.</dd>
-</dl>
-<br>
-<dd data-sortby="9">Reviews and articles:<dl>
+<dd data-sortby="9">Reviews and articles:
 <dd>â€¢149; Haas, Scott. "The Marx Brothers, Jews, and My Four-Year-Old Daughter." <i>Cineaste</i>, vol. 19 no. 2-3. 1992. pp: 48-49.</dd>
 <dd>â€¢149; Lieberfeld, Daniel; Sanders, Judith. "Here Under False Pretenses: the Marx Brothers Crash the Gates. <i>American Scholar</i> v64, n1 (Wntr, 1995):103 (6 pages).</dd>
 <dd>â€¢149; Winokur, Mark Brian. <b>American Laughter: The Immigrant as Theme in American Comdey Film</b> [Dissertation, 985] (NRLF C 2 930 656)</dd>
@@ -367,9 +326,9 @@ Contents:
 <dt><b>Men of Respect</b> (1991)</dt>
 <dd>Directed by William Reilly; starring John Turturro, Katherine Borowitz, Dennis Farina, Rod Steiger, Peter Boyle. A fearless mobster wins the respect and admiration of a powerful godfather by assassinating the leaders of a rival family. But the prodding of his ambitious wife and the prophecy of a ghetto gypsy, convinces the mobster to murder the godfather and claim his crown. A brilliant study of the criminal mind inspired by Shakespeare's MacBeth. 107 min. Video <b>vhs 999:1509</b></dd>
 <dd>â€¢149; Ѭ href="http://us.imdb.com/Title?Men+of+Respect+(1991)">Credits and other information from the Internet Movie DatabaseЖ</dd>
-<dd data-sortby="9">Reviews and articles:</dd>
 </dl>
-<dl>
+<dl><dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Maslin, Janet. "Men of Respect." (Living Arts Pages) (movie reviews) <i>New York Times</i> v140 (Fri, Jan 18, 1991):B5(N), C1(L), col 1, 17 col in.</dd>
 <dd>â€¢149; Taylor, Allan. "Men of Respect." (movie reviews) <i>Sight and Sound</i> v2, n1 (May, 1992):55 (2 pages).</dd>
 <dd>â€¢149; Travers, Peter. "Men of Respect." (movie reviews) <i>Rolling Stone,</i> n597 (Feb 7, 1991):85.</dd>
@@ -417,9 +376,6 @@ Contents:
 <dd>â€¢149;National Society of Film Critics Awards, USA - Best Director; Best Supporting Actor (Joe Pesci)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Actor (Robert DeNiro); Best Supporting Actor (Joe Pesci)</dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl><dl>
-<dt><b>Rocky</b> (1976)</dt>
-<dd>See Ѭ href="http://www.lib.berkeley.edu/MRC/sports.html#boxing">Sports filmsЖ for holdings and description</dd>
 </dl>
 <dl>
 <dt><b>The Rose Tattoo</b> (1955)</dt>
@@ -435,7 +391,6 @@ Contents:
 </dl>
 <br>
 <dl>
-<dt><b>The Sopranos</b> See Ѭ href="http://www.lib.berkeley.edu/MRC/tv.html#Cops">TV programsЖ for complete listing and description</dt>
 <dt><b>True Love</b> (1989)</dt>
 <dd>Directed by Nancy Savoca. Cast: Annabella Sciorra, Ron Eldard, Aida Turturro, Roger Rignack, Star Jasper. This comedy traces the shifting moods and contrary behavior of two Italian-American sweethearts in the last days before their wedding whose disagreements could very well land them in divorce court. 101 min. <b>DVD 5498</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0098528/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
@@ -510,12 +465,7 @@ In: <b>Ethnic images in American film and television</b> / edited by Randall M. 
 <dd>â€¢149; Ѭ href="http://www.imdb.com/title/tt0428038/">Credits and other information from the Internet Movie DatabaseЖ<br>
 Ѭ href="#top">Ж</dd>
 </dl>
-To the top
-<dl>
-<dt></dt>
-</dl>
-Ѭ href="http://www.lib.berkeley.edu/MRC/leaderpage.html">â€¢149;<br>
-Ж </div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
 <script src="../exportCSV.js"></script>
