--- a/03_jQuery-Test/imagesjews.html
+++ b/03_jQuery-Test/imagesjews.html
@@ -5,32 +5,11 @@
 </head>
 <body>
 <div id="dvData">
-<!--   METADATA using the Dublin Core  -->
- Ж
+<h1>The Movies, Race, and Ethnicity</h1>
+<h2>Jews</h2>
 
-<h3>The Movies, Race, and Ethnicity: Jews</h3>Contents:
+<h3>The Holocaust/World War II/Survivors</h3>
 <dl>
-<dd>â€¢149; Ѭ href="#holocaust">The Holocaust/World War II/SurvivorsЖ</dd>
-<dd>â€¢149; Ѭ href="#nazi">Antisemitic Nazi FilmsЖ</dd>
-<dd>â€¢149; Ѭ href="#jewishlife">Other Hollywood and International RepresentationsЖ</dd>
-<dd>â€¢149; Ѭ href="#yiddish">Yiddish filmЖ</dd>
-</dl>
-<dl>
-<dd data-sortby="9">See also the following MRC Videographies:</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/MidEastfilm.html#Israel">Middle Eastern CinemaЖ (for Israeli feature films)</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/JewishVid.html">Jewish StudiesЖ (documentary films about Jews/Jewish history)</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/propaganda.html#wwIIprop">War PropagandaЖ (for Nazi propaganda)</dd>
-</dl>
-<dl>
-<dd data-sortby="9">Bibliography on this topic: </dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/JewishBib.html">Jews in Film and Television: A Bibliography of Materials in the UC Berkeley LibrariesЖ</dd>
-</dl>
-<dl>
-<dt></dt>
-</dl>
-
-<dl>
-<dt><b>The Holocaust/World War II/Survivors</b></dt>
 <dt><b>38--auch das war Wien</b> (Austria / West Germany, 1987)</dt>
 <dd>Director, Wolfgang Gl&uuml;ck. Cast: Sunnyi Melles, Tobias Engel, Heinz Trixner, Ingrid Burkhard. Follows two lovers--one Jewish, one Aryan--in pre-war Vienna who are blind to the inhumanity which surrounds them. In German without subtitles. 94 min. <b>DVD 7693</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0090554/">Credits and other information from the Internet Movie DatabaseЖ</dd>
@@ -302,8 +281,8 @@
 <dl>
 <dd data-sortby="9">See also:</dd>
 <dd>â€¢149; Solomon Perel, Nov. 9, 1993, University of California, Berkeley. 110 min. <b>Video/C 5199</b></dd>
-</dl>â€¢149;<b>Awards</b>
-<dl>
+<b>Awards</b>
+
 <dd>â€¢149;Golden Globe Awards - Best Foreign Language Film</dd>
 <dd>â€¢149;National Society of Film Critics: Best Foreign Language Film</dd>
 <dd>â€¢149;National Board of Review, USA - Best Foreign Language Film</dd>
@@ -841,16 +820,9 @@
 <dd data-sortby="9">Reviews and articles:</dd>
 <dd>â€¢149;Giukin, Lenutsa. "Radu Mihaileanu, a New Cinematic Humanism." <i>Film Criticism</i>, Winter2009/Spring2010, Vol. 34 Issue 2/3, p67-80, 14p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=52943480&site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
-<br>
-Ж
-<dl>
-<dt><b>Antisemitic Nazi Film</b><br>
-</dt>
-</dl>
-<dl>
-<dd data-sortby="9">See also:</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/propaganda.html#nazi">PropagandaЖ (for other Nazi propaganda films)</dd>
-</dl>
+
+<h3>Antisemitic Nazi Film</h3>
+
 <dl>
 <dt><b>Der Ewige Jude (Eternal Jew)</b> (1940)</dt>
 <dd>Directed by Fritz Hippler. Period An anti-Semitic propaganda film produced in 1940's Nazi Germany which explores Jewish practices as viewed through the eyes of wartime Germany, presenting them as evil, corrupt and intent on world domination. The climax and resolution of the film is Hitler's 1939 announcement that the Jewish race will meet its "annihilation." <b>DVD 3854 (without English subtitles) Video/C 1351 (partially subtitled in English); vhs 999:295 (without English subtitles)</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0156524/">Credits and other information from the Internet Movie DatabaseЖ
@@ -882,8 +854,8 @@
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0248379/">Credits and other information from the Internet Movie DatabaseЖ<br>
 Ж</dd>
 </dl>
+<h3>Other Hollywood and International Representations of Jews and Jewish Life</h3>
 <dl>
-<dt><b>Other Hollywood and International Representations of Jews and Jewish Life</b></dt>
 <dt><b>Affaire Blum (Blum Affair)</b> (Germany, 1948)</dt>
 <dd>Directed by Erich Engel. Cast: Paul Bildt, Hans Christian Blech, Klaus Becker, Gerhard Bienert. A film based on a true case which occured in the 1920's. An accountant responds to an advertisment and gets murdered for his money. Mr. Blum is blamed for the murder because the accountant was about to give evidence about a tax fraud involving Mr. Blum's company. A dramatic presentation about pre-Hitlerite Germany which relates the story of a Jewish businessman falsely accused by anti-Semitic police. 100 min. <b>vhs 999:299</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0040079/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
@@ -1145,10 +1117,6 @@
 <dd>â€¢149; Ѭ href="http://www.imdb.com/title/tt0287986/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
-<dt><b>The Goldbergs</b></dt>
-<dd>SEE Ѭ href="http://www.lib.berkeley.edu/MRC/tv.html#goldbergs">Television videographyЖ</dd>
-</dl>
-<dl>
 <dt><b>The Golem: How He Came Into the World</b> (Germany, 1920, Germany)</dt>
 <dd>Directed by Carl Boese and Paul Wegener. Set in medieval Prague, the rabbi gives life to the Golem who falls in love with the rabbi's daughter and brings fear to the emperor's court. He is destroyed by an innocent child. Based on the legend of the Golem, a popular figure in Jewish tradition.</dd>
 <dd>â€¢149; Restored authorized edition, 86 min.: <b>DVD 1384</b></dd>
@@ -1252,7 +1220,7 @@
 </dl>
 <dl>
 <dt><b>Jewish Happiness (Evreiskoe schast'e)</b> (Soviet Union, 1925)</dt>
-<dd>Directed by Granovsky Alexey. Menachem Mendel tries to make some money by selling fancy goods in the street, and then by setting up an insurance office, but his projects end in failure. Chancing upon a list of wealthy brides mislaid by a matchmaker, Menachem decides to get involved in matchmaking. The daughter of the wealthy Kimbak loves a poor Jewish lad called Zalman, but her father won&rsquo;t give her his blessing. Menachem offers to find Kimbak a wealthy groom for his daughter, but owing to a series of misunderstandings he finds her a bride. As a way out of this unpleasant situation, Kimbak agrees to his daughter marrying the poor lad Zalman, while Menachem, abused and disgraced, heads off in search of new money-making schemes. 69 min.<br>
+<dd>Directed by Granovsky Alexey. Menachem Mendel tries to make some money by selling fancy goods in the street, and then by setting up an insurance office, but his projects end in failure. Chancing upon a list of wealthy brides mislaid by a matchmaker, Menachem decides to get involved in matchmaking. The daughter of the wealthy Kimbak loves a poor Jewish lad called Zalman, but her father won&rsquo;t give her his blessing. Menachem offers to find Kimbak a wealthy groom for his daughter, but owing to a series of misunderstandings he finds her a bride. As a way out of this unpleasant situation, Kimbak agrees to his daughter marrying the poor lad Zalman, while Menachem, abused and disgraced, heads off in search of new money-making schemes. 69 min. DVD 9999<br>
 â€¢149;Ѭ href="http://www.cinema.mosfilm.ru/Movie.aspx?id=783d55b5-25ee-4b0d-978f-cbb5a699a7fc"><b>View this video online</b>Ж</dd>
 </dl>
 <dl>
@@ -1368,39 +1336,11 @@
 <dd>â€¢149;Cheever, Abigail. "Assimilation, Authenticity, and 'Natural Jewishness': Marjorie Morningstar and Real Phony Jews." In: <b>Real phonies : cultures of authenticity in post-World War II America</b> / Abigail Cheever. Athens : University of Georgia Press, c2010. (Ѭ href="http://site.ebrary.com/lib/berkeley/docDetail.action?docID=10367029&p00">Full text available onlineЖ [UC Berkeley users only]; Print: Main (Gardner) Stacks PS228.S36 C47 2010)</dd>
 </dl>
 <dl>
-<dt><b>Marx Brothers</b></dt>
-<dd>The Marx Brothers particularly anarchic comedy, with its elements of vaudeville and Yiddish theater schtick, can be read as a goofy metaphor for the "messy" entry of early century immigrants into established American culture.</dd>
-</dl>
-<dl>
-<dd data-sortby="9">See also the following MRC Videographies:</dd>
-<dd>â€¢149; MRC's Ѭ href="http://www.lib.berkeley.edu/MRC/Comedyfilm.html">Comedy videographyЖ for other Marx Brothers titles.</dd>
-</dl>
-<dl>
-<dd data-sortby="9">Bibliography on this topic: </dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/JewishBib.html#marx">See separate Bibliography of books and articles about the Marx BrothersЖ</dd>
-</dl>
-<dl>
 <dt><b>Mendy (Mendeleh)</b> (2003)</dt>
 <dd>Directed by Adam Vardy. Cast: Margaret Ivan Sandomire, Gabriela Dias, Spencer Chandler. The story of a young Brooklyn Hasid, a devout member of an ultra-orthodox Jewish sect, as he struggles to adapt and find his place in modern secular society. Special features: Director commentary; theatrical trailer; interview with co-writer, Heshey Schnitzler; 2 music videos by The Say Machinery. 90 min. <b>DVD 7973</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0382847/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<dl>
-<dt><b>Merchant of Venice</b></dt>
-<dd>See Ѭ href="http://www.lib.berkeley.edu/MRC/ShakespeareVid.html#venice">MRC Shakespeare videographyЖ for various versions</dd>
-</dl>
-<dl>
-<dd data-sortby="9">Reviews and articles:</dd>
-<dd>â€¢149;Adelman, Janet. <b>Blood relations : Christian and Jew in the Merchant of Venice</b> / Janet Adelman. Chicago : University of Chicago Press, 2008. (Main (Gardner) Stacks PR2825 .A36 2008)</dd>
-<dd>â€¢149;Armstrong, Gareth. <b>A case for Shylock : around the world with Shakespeare's Jew</b> London : Nick Hern, 2004. (MAIN: PN2598.A823 A3 2004)</dd>
-<dd>â€¢149;Greenberg, Harvey Roy. "The Thing Itself." (history of Shylock portrayals in theatre and film).<i>Psychiatric Times</i> (July 1, 2005): 61.</dd>
-<dd>â€¢149;Halio, Jay L. "Shylock: Shakespeare's Bad Jew." In: <b>Images of matter : essays on British literature of the Middle Ages and Renaissance</b> : proceedings of the Eighth Citadel Conference on Literature, Charleston, South Carolina, 2002 / edited by Yvonne Bruce. Newark : University of Delaware Press ; Cranbury, NJ : Associated Unversity Presses, c2005. (Main Stack PR423.C58 2002)</dd>
-<dd>â€¢149;Hirsch, Brett D. "Counterfeit Professions: Jewish Daughters and the Drama of Failed Conversion in Marlowe's The Jew of Malta and Shakespeare's The Merchant of Venice." <i>Early Modern Literary Studies: A Journal of Sixteenth- and Seventeenth-Century English Literature</i>, vol. 19, pp. 37 paragraphs, 2009 Ѭ href="http://extra.shu.ac.uk/emls/si-19/hirscoun.html">Full-text of this article / review is available:Ж</dd>
-<dd>â€¢149;Hirschfeld, Heather. "'We All Expect a Gentle Answer, Jew': The Merchant of Venice and the Psychotheology of Conversion." <i>ELH</i>, vol. 73, no. 1, pp. 61-81, Spring 2006Ѭ href="http://muse.jhu.edu/journals/elh/v073/73.1hirschfeld.html">Full-text of this article / review is available:UC users onlyЖ</dd>
-<dd>â€¢149;Rich, Jennifer. "The Merchant Formerly Known as Jew: Redefining the Rhetoric of Merchantry in Shakespeare's Merchant of Venice." <i>Early Modern Literary Studies: A Journal of Sixteenth- and Seventeenth-Century English Literature</i>, vol. 13, no. 3, pp. 2.1-19, Jan 2008 Ѭ href="http://extra.shu.ac.uk/emls/13-3/richmerc.htm">Full-text of this article / review is available:Ж</dd>
-<dd>â€¢149;Shapiro, James S. <b>Shakespeare and the Jews</b> New York : Columbia University Press, c1996. (MAIN: PR2825 .S44 1996; MOFF: PR2825 .S44 1996)</dd>
-<dd>â€¢149;Shapiro, Michael. "The Merchant of Venice after the Holocaust, or Shakespearean Romantic Comedy Meets Auschwitz." <i>Cithara: Essays in the Judaeo-Christian Tradition,</i> vol. 46, no. 1, pp. 3-23, November 2006</dd>
-<dd>â€¢149;Yaffe, Martin D. <b>Shylock and the Jewish question</b> Baltimore : Johns Hopkins University Press, c1997. New York : Columbia University Press, c1996. (MAIN: PR2825 .Y34 1997)</dd>
-</dl>
+
 <dl>
 <dt><b>Mother Night</b> (1996)</dt>
 <dd>Directed by Keith Gordon. Cast: Nick Nolte, Sheryl Lee, Alan Arkin, Kirsten Dunst, John Goodman, Henry Gibson. An American playwright living in Germany is persuaded to become an Allied spy within the Nazi Party. He becomes a notorious spokesman for the Nazi's anti-American and anti-semitic agenda, gaining celebrity in Germany and infamy in the States. Not even his wife knows of his clandestine spying, but as the Reich crumbles, so does his life. Escaping capture and living back in the U.S., he struggles with his past as he is confronted by Nazi haters and sympathizers. Based on the book by Kurt Vonnegut. 113 min. <b>DVD X1064</b></dd>
@@ -1581,8 +1521,7 @@
 <dt><b>The Wandering Jew (Le juif errant)</b> (France, 1903)</dt>
 <dd>Director, Georges M&eacute;li&egrave;s. "To the modern eye, this is obviously a trick film made with double exposure; and Melies, in his role as the Wandering Jew, is quite over the top as he wanders through a field of hard stones, having dreams and visions of Christ on his way to Calvary, the devil tormenting him and of the Mother of God. To a Frenchman of the era, who quite probably saw this film at a fairground -- a prime audience for Melies in this era -- it is simply and purely a movie of faith --- and a certain amount of anti-Semitism, too." [Ѭ href="http://www.imdb.com/title/tt0223586/">IMDBЖ] <b>DVD X5245</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0024750/">Credits and other information from the Internet Movie DatabaseЖ</dd>
-</dl>
-<dl>
+
 <dd>â€¢149;Ѭ href="http://www.europafilmtreasures.eu/PY/389/see-the-film-the_wandering_jew">Watch Programme l'Affaire Dreyfus onlineЖ via the Europa Film Treasures</dd>
 </dl>
 <dl>
@@ -1623,14 +1562,7 @@
 <dd>Directed by Anthony Drazan. A young Jewish white man begins dating the cousin of his best friend, both of whom are black, igniting long simmering racial tensions at their high school. 102 min. <b>DVD X4879</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?Zebrahead+(1992)">Credits and other information from the Internet Movie DatabaseЖ<br>
 Ж</dd>
 </dl>
-<dl>
-<dt>Yiddish Film<br>
-<dd data-sortby="9">See also:</dd></dt>
-</dl>
-<dl>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/JewishBib.html#yiddish">Bibliography of books/articles about Yiddish filmЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.jewishmuseum.org/online/gallery_theme.php?id=yiddish">Yiddish Film & RadioЖ (Jewish Museum exhibit)</dd>
-</dl>
+<h3>Yiddish Film</h3>
 <dl>
 <dt><b>Almonds and Raisins: A History of the Yiddish Cinema.</b></dt>
 <dd>A documentary on the Yiddish cinema in America, primarily in New York City from 1927 to the 1940's. Features extensive excerpts from Yiddish films (most subtitled in English) including The cantor's son, Overture to glory with Moishe Oysher, Yidl mitn Fidl with Molly Picon and Tevye with Maurice Schwartz. Has contemporary footage of New York City and Eastern European village life. Includes interviews with those who have participated in the Yiddish cinema. 90 min. <b>Video/C 1881</b></dd>
@@ -1831,11 +1763,10 @@
 <dd data-sortby="9">Reviews and articles:</dd>
 <dd>â€¢149; Alisa Lebow. "Strategic Sentimentality: Nostalgia and the Work of Eleanor Antin." <i>Camera Obscura</i>. 2007. p. 129</dd>
 <dd>â€¢149;Skoller, Jeffrey. "The Man Without a World." <i>Film Quarterly</i>, Vol. 49, No. 1 (Autumn, 1995), pp. 28-32 Ѭ href="http://www.jstor.org/stable/1213490">Full-text of this article / review is available:UC users onlyЖ</dd>
-</dl>
-<dl>
-<dd><br>
-Reviews and articles:</dd>
-<dd>â€¢149;Antin, Eleanor. <b>The man without a world : a screenplay</b> / Eleanor Antin. K&oslash;benhavn & Los Angeles : Green Integer ; Saint Paul, MN : Distributed in US by Consortium Book Sales and Distribution, c2002. (Main (Gardner) Stacks PS3551.N769 M35 2002)</dd>
+
+<dd>
+Reviews and articles:<br>
+â€¢149;Antin, Eleanor. <b>The man without a world : a screenplay</b> / Eleanor Antin. K&oslash;benhavn & Los Angeles : Green Integer ; Saint Paul, MN : Distributed in US by Consortium Book Sales and Distribution, c2002. (Main (Gardner) Stacks PS3551.N769 M35 2002)</dd>
 </dl>
 <dl>
 <dt><b>Mirele Efros</b> (USA, 1939)</dt>
@@ -1989,12 +1920,7 @@ Reviews and articles:</dd>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.brandeis.edu/jewishfilm/Catalogue/films/yizkor.html">Description from National Center for Jewish Film catalogЖ</dd>
 </dl>
-<br>
-<dl>
-<dt></dt>
-</dl>
-Ѭ href="http://www.lib.berkeley.edu/MRC/leaderpage.html">â€¢149;<br>
-Ж Ѭ href="mailto:ghandman@library.berkeley.edu">Gary Handman, Head, Media Resources Center.Ж<br></div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
 <script src="../exportCSV.js"></script>
