--- a/03_jQuery-Test/imageslatinos.html
+++ b/03_jQuery-Test/imageslatinos.html
@@ -5,16 +5,9 @@
 </head>
 <body>
 <div id="dvData">
-
-<img src="http://www.lib.berkeley.edu/MRC/movrace.gif"><br>
-<b>Latinos</b>Ж
+<h1>The Movies, Race, and Ethnicity</h1>
+<h2>Latinos</h2>
 <dl>
-<dd data-sortby="9">Bibliography on this topic: </dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/LatinoBib.html">Chicanos/Latinos in the MoviesЖ</dd>
-</dl>
-<dl>
-<dt><br>
-</dt>
 <dt><b>Against All Odds (Contra todo)</b>(2006)</dt>
 <dd>Directed by Michel Franco, Karim Raoul, Dora Pe&ntilde;a, and Yuri Makino. Contents: Cyclone -- Crazy life -- Entre dos -- Night breeze -- El Soldado. In the tradition of Amores Perros, the stories in "Contra todo" paint a tapestry of experiences depicting Latino American life in the US. Faced with various obstacles, the characters risk everything to survive. Cyclone tells the story of Miguel growing up on the tough streets of New York. In Crazy Life, LA native Dulce's love for Chuy makes her question right and wrong. In Entre Dos, a doctor compromises his ethical code in order to save the life of his 10 year-old son. Traveling to Mexico City can be dangerous, especially in El Soldado, where Gabo's car gets towed, and he's stuck in a bad part of town. In Night breeze Alma is growing up and wanting to hang out with friends. When a border patrol police stops her demanding identification, her true origins are put to the test. 91 min. <b>DVD 9504</b></dd>
 </dl>
@@ -371,10 +364,6 @@
 <dt><b>The Gay Desperado</b> (1936)</dt>
 <dd>Directed by Rouben Mamoulian. Cast: Nino Martini, Ida Lupino, Leo Carrillo, James Blakeley, Harold Huber, Mischa Auer. In this musical spoof lampooning gangster films a genial Mexican bandit gets nowhere until he and his amigos begin studying gangster techniques in Hollywood movies. Selecting kidnapping as his crime of choice, he snatches Chivo, an opera star and Jane, a troublesome heiress. He hopes to extract a huge ransom for the heiress's return, but Jane is more trouble than she's worth. All ends happily when the bandit engineers a romance between Chivo and Jane. 87 min. <b>DVD X4329</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0027660/">Credits and other information from the Internet Movie DatabaseЖ</dd>
-</dl>
-<dl>
-<dt><b>George Lopez</b>(TV)</dt>
-<dd>Cast: George Lopez, Constance Marie, Valente Rodriguez, Masiela Lusha, Luis Armand Garcia, Belita Moreno. SEE Ѭ href="http://www.lib.berkeley.edu/MRC/tv.html#lopez">TV videographyЖ</dd>
 </dl>
 <dl>
 <dt><b>Giant</b> (1956)</dt>
@@ -836,10 +825,7 @@ In the late 1990's, Speedy was also featured in a program on the cable TV Cartoo
 <dl>
 <dt><b>Traffic</b> (Germany / USA, 2000)</dt>
 <dd>Directed by Steven Soderbergh. Cast: Don Cheadle, Benicio Del Toro, Michael Douglas, Luis Guzman, Dennis Quaid, Catherine Zeta-Jones. Presents a mix of interrelated stories: a Mexican policeman finds himself and his partner caught in an often deadly web of corruption; a pair of DEA agents work undercover in a sordid and dangerous part of San Diego; a wealthy drug baron living in upscale, suburban America is arrested and learns how quickly his unknowing and pampered wife takes over his business; and the U.S. President's new drug czar must deal with his increasingly drug-addicted teenage daughter. 147 min. <b>DVD 866</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0181865">Credits and other information from the Internet Movie DatabaseЖ</dd></dl>
-<dl>
-<dt><b>Ugly BettyЖ(TV)</b></dt>
-<dd>Cast: America Ferrera, Michael Urie, Vanessa Williams, Eric Mabius, Alan Dale, Tony Plana, Ana Ortiz, Ashley Jensen, Becki Newton, Mark Indelicato, Freddy Rodr&iacute;guez, Kevin Sussman, Rebecca Romijn, Christopher Gorham, Judith Light, Salma Hayek. SEE Ѭ href="http://www.lib.berkeley.edu/MRC/tv.html#brtty">TV ProgramsЖ</dd>
-</dl>
+
 <dl>
 <dt><b>Undefeated</b> (2003)</dt>
 <dd>Directed by John Leguizamo. Cast: John Leguizamo, Clifton Collins, Jr., Vanessa Ferlito, Omar Benson Miller, Nestor Serrano, Robert Forster. A Latino boxer must navigate the path between his newfound fame, with all its seductive trappings, and his humble yet proud roots growing up on the hard, mean streets of Jackson Heights, Queens. Surrounded by his childhood friends and an old-school trainer, Lex Vargas endures a devastating personal loss before turning professional, eventually signing with a high-profile promoter. Ultimately his fame and fortune threatens to undermine the longtime bonds he shares with his buddies from the old neighborhood. 92 min. <b>DVD 2411</b></dd>
