--- a/03_jQuery-Test/imagesnatives.html
+++ b/03_jQuery-Test/imagesnatives.html
@@ -4,21 +4,8 @@
 </head>
 <body>
 <div id="dvData">
-
-<img src="http://www.lib.berkeley.edu/MRC/movrace.gif"><br>
-<img src="http://www.lib.berkeley.edu/MRC/movnatam.gif">
-<dl>
-<dd>Ж Bibliography on this topic: </dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/IndigenousBib.html">Bibliography of books and articles on Native American representation in the movies in the UCB LibraryЖ</dd>
-</dl>
-<dl>
-<dt><dd data-sortby="9">See also:</dd></dt>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/Westernsfilm.html">Listing of Westerns in the MRC collectionЖ</dd>
-</dl><dl>
-<dt><b>1492: Conquest of Paradise</b> (UK / USA / France / Spain, 1992)</dt>
-<dd>Directed by Ridley Scott. Cast: Gerard Depardieu, Armand Assante, Loren Dean, Angela Molina, Fernando Rey, Michael Wincott, Tcheky Karyo, Kevin Dunn, Mark Margolis, Juan Diego Botto, Achero Manas, Sigourney Weaver. The film chronicles the voyages of Columbus, the colonization of the New World highlighting Old World arrogance and New World innocence and concluding with Columbus' personal tragedy. 150 min. <b>DVD X6640; vhs 999:3672</b><li>â€¢149; Ѭ href="http://us.imdb.com/title/tt0103594/">Credits and other information from the Internet Movie DatabaseЖ
-</dd>
-</dl>
+<h1>The Movies, Race, and Ethnicity</h1>
+<h2>Native Americans</h2>
 <dl>
 <dt><b>Annie Get Your Gun</b> (1950)</dt>
 <dd>Directed by George Sidney. Cast: Betty Hutton, Howard Keel, Louis Calhern, J. Carrol Naish. Music and lyrics by Irving Berlin. Based on the musical play produced on the stage by Richard Rodgers and Oscar Hammerstein, II. Based on the book by Herbert Fields and Dorothy Fields. Frank Butler, handsome star of Buffalo Bill's Wild West Show, bags clay pigeons and ladies' hearts. He's the best marksman in the world--until a backwoods hoyden challenges him. Her name? Annie Oakley. Special features include: Original theatrical trailer, new introduction by Annie get your gun Broadway revival star Susan Lucci, 3 rare outtake musical numbers, Let's go west again with Betty Hutton, and a pair with the originally cast Judy Garland, Doin' what comes natur'lly and <b>I'm an Indian too</b> ("With my chief in his teepee / We'll raise an Indian family / And I'll be busy night and day / Looking like a flour sack / With two papooses on my back / And three papooses on the way") 127 min. <b>DVD 395</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0042200/">Credits and other information from the Internet Movie DatabaseЖ</dd>
@@ -299,7 +286,7 @@
 <dl>
 <dt><b>Heart of an Indian Maiden</b> (1911)</dt>
 <dd>Director: Unknown. Cast: Pearl White. To escape death that awaits him at the hands of the Indians, a bison hunter kept prisoner resigns himself to marry the tribal chief&rsquo;s daughter, who has fallen madly in love with him. But one night he manages to escape and finds his wife and child. Humiliated and wronged, the young squaw in love is not in the mood for revenge however. The Indian represents one of the roles characteristic of a cinematographic genre that established itself in the twenties.
-â€¢149;Ѭ href="http://www.europafilmtreasures.eu/PY/407/see-the-film-the_heart_of_an_indian_maid">Watch this film onlineЖ via the Europa Film Treasures</dd>
+â€¢149;Ѭ href="http://www.europafilmtreasures.eu/PY/407/see-the-film-the_heart_of_an_indian_maid">Watch this film onlineЖ via the Europa Film Treasures DVD 9999</dd>
 </dl>
 <dl>
 <dt><b>The History of the Luise&ntilde;o People: La Jolla Reservation, Christmas 1990</b></dt>
@@ -718,11 +705,7 @@
 <dd>Directed by John Woo. Cast: Nicholas Cage, Adam Beach, Peter Stormare, Noah Emmerich, Mark Ruffalo, Brian Van Holt, Martin Henderson, Roger Willie, Frances O'Connor, Christian Slater. A battle-weary Marine is assigned to guard - and ultimately befriends - a young Navajo soldier who has been trained to be a code talker. This code, the Navajo code, and the men who knew the code, were to be guarded as they went into action. It was the unspoken duty of the Marine to kill the Navajo soldier before he could be taken prisoner of war by the Japanese. This is the one wartime code that was never broken by the enemy. 134 min. <b>DVD 1391</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0245562/">Credits and other information from the Internet Movie DatabaseЖ
 </dd>
 </dl>
-<dl>
-<dt></dt>
-</dl>
-Ѭ href="http://www.lib.berkeley.edu/MRC/leaderpage.html">â€¢149;<br>
-Ж Ѭ href="mailto:ghandman@library.berkeley.edu">Gary Handman, Head, Media Resources Center.Ж<br></div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
 <script src="../exportCSV.js"></script>
