--- a/03_jQuery-Test/immigrantsfromeurope.html
+++ b/03_jQuery-Test/immigrantsfromeurope.html
@@ -5,19 +5,8 @@
 </head>
 <body>
 <div id="dvData">
-Ж
-
-<h3>Immigrants from Europe and Scandinavia</h3><dl>
-<dd data-sortby="9">See also the following MRC Videographies:</dd>
-<dd>â€¢149; For videos on Asian immigrants <b>SEE</b> MRC's Ѭ href="http://www.lib.berkeley.edu/MRC/AsianAmvid.html">Asian American VideographyЖ</dd>
-<dd>â€¢149; For videos on Jewish immigrants <b>SEE</b> MRC's Ѭ href="http://www.lib.berkeley.edu/MRC/JewishVid.html">Jewish Studies VideographyЖ</dd>
-<dd>â€¢149; For videos on Middle Eastern immigrants <b>SEE</b> MRC's Ѭ href="http://www.lib.berkeley.edu/MRC/mideastam.html">Middle Eastern American VideographyЖ</dd>
-<dd>â€¢149; For videos on Mexican/Latin American immigrants <b>SEE</b> MRC's Ѭ href="http://www.lib.berkeley.edu/MRC/LatinoVid.html">Latin American VideographyЖ</dd>
-<dd>â€¢149; For movie depictions of immigrants, <b>SEE</b> MRC's Ѭ href="http://www.lib.berkeley.edu/MRC/EthnicImagesVid.html">Movies, Race, and Ethnicity videographyЖ</dd>
-</dl><dl>
-<dt><b>Amerikanuak: the Basques of the American West</b></dt>
-<dd>Contemporary interviews and festival activities are combined with archival photographs and maps to present a brief introduction to American Basques and their culture. 1991. 28 min. Video/C 2312</dd>
-</dl>
+<h1>The Movies, Race, and Ethnicity</h1>
+<h2>Immigrants from Europe and Scandinavia</h2>
 <dl>
 <dt><b>Ave Maria: The Story of the Fisherman's Feast</b></dt>
 <dd>Held each year in Boston's Italian-American north end, the Feast of the Madonna del Soccoroso (also known as the Fisherman's Feast) is one of the most striking examples of the preservation of Old World cultural traditions. The feast culminates in the "angel ceremony," in which a young girl dressed as an angel "flies" by means of a pulley system three stories over the crowd below. 1986. 24 min. Video/C 8597</dd>
@@ -31,9 +20,9 @@
 <dd>â€¢149; Ѭ href="http://www.newday.com/films/The_Blinking_Madonna.html">Description of the video from New Day Films catalogЖ</dd>
 </dl>
 <dl>
-<dd data-sortby="9">Reviews and articles:</dd>
 </dl>
-<dl>
+<dl><dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Martin, James. The Blinking Madonna and Other Miracles. (movie reviews) <i>America</i> v176, n21 (June 21, 1997):23.</dd>
 <dd>â€¢149; Garofalo, Denise A. "The Blinking Madonna and Other Miracles." (video recording reviews) <i>Library Journal</i> v122, n9 (May 15, 1997):115 (2 pages).</dd>
 <dd>â€¢149; James, Caryn. "The Blinking Madonna and Other Miracles." (video recording reviews) <i>New York Times</i> v146 (Mon, May 12, 1997):B2(N), C14(L), col 2, 7 col in.</dd>
@@ -110,11 +99,9 @@ Interviews with Bruno Bettelheim, Billy Wilder, Fritz Lang, Rod Steiger, Alfred 
 <dl>
 <dt><b>In Heaven There is No Beer?</b></dt>
 <dd>A film by Les Blank. Shows Polish-American polka musicians and polka dancers performing at festivals, dance halls, and small beer halls in the eastern and midwestern parts of the United States. Features the music of Eddie Blazoncyck and the Versatones, the Dick Pillar Orchestra, Renata and Girls, Girls, Girls, and the Mrozinski Brothers. 51 min. DVD 4970 Video/C 2111</dd>
-<dd> Ѭ href="http://www.lib.berkeley.edu/video/zkMnnz_e5BGES4b-WNBn1w">Ж</dd>
+<dd> Ѭ href="http://www.lib.berkeley.edu/video/zkMnnz_e5BGES4b-WNBn1w">â€¢149; Requires Real PlayerЖ</dd>
 </dl>
-<dl>
-<dd>â€¢149; Requires Real Player</dd>
-</dl>
+
 <dl>
 <dt><b>Irish in America: The Long Journey Home</b></dt>
 <dd>1997. 80 min. each installment</dd>
@@ -122,9 +109,9 @@ Interviews with Bruno Bettelheim, Billy Wilder, Fritz Lang, Rod Steiger, Alfred 
 <dd>â€¢149; <b>All Across America.</b> The second of a four part series packed with personal remembrances and rare archival footage of the Irish immigration to America. At the start the Irish who survived the famine found poverty, disease, religious bigotry and political oppression in America. But they stuck together, built their own churches and communities and by the later 19th century Irish-American heroes had begun to emerge. Prospector John Mackay discovered silver and gold, Marcus Daly opened his Anaconda Copper Mine and John L. Sullivan made himself a legend by facing challenger Jake Kilrain in an amazing 75-round boxing match. Video/C 5303</dd>
 <dd>â€¢149; <b>Up From City Streets.</b> The third of a four part series packed with personal remembrances and rare archival footage of the Irish immigration to America. Eventually the Irish immigrants rose to run America's great cities from the sewers to the skyline. They left their mark everywhere: in theater, sports, music, crime, labor, Wall Street, Hollywood and one Irish boy, Al Smith, made a bid for the American presidency. Video/C 5304</dd>
 <dd>â€¢149; <b>Success</b>. The last of a four part series packed with personal remembrances and rare archival footage of the Irish immigration to America. This final segment chronicles the history of two very different Irish-American families who both reached international celebrity in the 1930s. The Kennedys were considered America's royalty, especially when patriarch Joseph P. Kennedy Sr., was appointed ambassador to England and his son, John F. Kennedy became the first Irish-Catholic president of the United States. In contrast to the Kennedy's basking in their assimilation as Americans, the playwright, Eugene O'Neill, was fiercely Irish and kept his family roots exposed in most of his classic plays preferring to relive his family's bitter struggle to remain Irish in America. Video/C 5305</dd>
-<dd data-sortby="9">Reviews and articles:</dd>
 </dl>
-<dl>
+<dl><dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Goodman, Walter. "The Irish in America: Long Journey Home." (television program reviews) New York Times v147 (Mon, Jan 26, 1998):B1(N), E1(L), col 4, 13 col in.</dd>
 <dd>â€¢149; Leonard, John. "The Irish in America: Long Journey Home." (television program reviews) <i>New York</i> v31, n3 (Jan 26, 1998):50 (2 pages).</dd>
 <dd>â€¢149; Phillips, Barbara D. "The Irish in America: Long Journey Home." (television program reviews) <i>Wall Street Journal</i> (Mon, Jan 26, 1998):A16(W), A16(E), col 1, 21 col in.</dd>
@@ -263,12 +250,7 @@ Interviews with Bruno Bettelheim, Billy Wilder, Fritz Lang, Rod Steiger, Alfred 
 <dd>â€¢149; Forry, Mark E. "Ziveli: Medicine for the Heart." (movie reviews) <i>Ethnomusicology</i> v33, n2 (Spring-Summer, 1989):365 (3 pages).</dd>
 <dd>â€¢149; Patterson, G. James. "Ziveli: Medicine for the Heart." (movie reviews) <i>American Anthropologist</i> v90, n2 (June, 1988):485 (2 pages).</dd>
 </dl>
-<br>
-
-<dl>
-<dt></dt>
-</dl>Ѭ href="http://www.lib.berkeley.edu/MRC/leaderpage.html">â€¢149;<br>
-Ж </div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
 <script src="../exportCSV.js"></script>
