--- a/03_jQuery-Test/immigration.html
+++ b/03_jQuery-Test/immigration.html
@@ -5,12 +5,8 @@
 </head>
 <body>
 <div id="dvData">
-<!--   METADATA using the Dublin Core  -->
- Ж
-
-<b>US Immigration - General Works</b>
+<h1>U.S. Immigration - General Works</h1>
 <dl>
-<dt>The following are general and overview works dealing with immigration to the United States within the last half century. For current and historical works about specific immigrant/ethnic groups see listings for particular ethnic/national groups in Ѭ href="http://www.lib.berkeley.edu/MRC/ethnicstudieslist.html">MRC ethnic studies videographies.Ж</dt>
 <dt><b>Abandoned: The Betrayal of America's Immigrants</b></dt>
 <dd>Looks at the most recent wave of anti-immigrant sentiment in the United States and at the personal impact of new immigration laws, focusing on the severity of current detention and deportation policies. Legal residents find themselves torn away from their American families and sent to countries they barely know while political asylum seekers are kept for years in county jails that profit from their incarceration. Directed by David Belle and Nicholas Wrathall. 2000. 55 min. <b>DVD 6747 Video/C 7695</b><br>
 Ѭ href="http://www.lib.berkeley.edu/MRC/onlinecopyright.html">&copy; noticeЖ<br>
