--- a/03_jQuery-Test/japanamvid.html
+++ b/03_jQuery-Test/japanamvid.html
@@ -6,18 +6,9 @@
 <body>
 <div id="dvData">
 
-<img src="http://www.lib.berkeley.edu/MRC/asianam.gif"><br>
-<h3>Japanese Americans</h3>Contents:
-<dl>
-<dd>â€¢149;Ѭ href="#culture">Japanese American History and CultureЖ</dd>
-<dd>â€¢149;Ѭ href="#internment">Japanese American InternmentЖ</dd>
-</dl>
-<dd data-sortby="9">See also the following MRC Videographies:</dd><dl>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/EthnicImagesVid.html">The Movies, Race, EthnicityЖ (for cinema works by Asian American filmmakers or films with images of Asian Americans</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/mixedracevid.html">People of Mixed Race - Interracial Marriage/DatingЖ</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/CJKVid.html">China, Japan, Korea, & Pacific IslandsЖ</dd>
-</dl>
-<br><dl></dl><h3>ЖJapanese American History and Culture</h3>
+<h1>Asian, Pacific, and South Asian American Studies</h1>
+<h2>Japanese Americans</h2>
+<h3>Japanese American History and Culture</h3>
 <dl>
 <dt><b>Aoki</b>.</dt>
 <dd>Chronicles the life of Richard Aoki, a third-generation Japanese American who became one of the founding members of the Black Panther Party. Filmed over the last five years of Richard's life, this documentary features extensive footage with Richard and exclusive interviews with his comrades, friends, and former students. A film by Ben Wang & Mike Cheng. 94 min. 2009. <b>DVD X6738</b></dd>
@@ -287,7 +278,7 @@
 <dd>â€¢149; "Who's Going to Pay for These Donuts Anyway?" <i>American Historical Review</i> 1993 98(4): 1181-1184</dd>
 </dl>
 </dd>
-</dl><h3>ЖJapanese American Internment</h3>
+</dl><h3>Japanese American Internment</h3>
 <dl>
 <dt><b>50th year Commemoration of Japanese American Internment</b></dt>
 <dd>The chancellor of the University of California, Berkeley, Chang-Lin Tien, and Jessie Jackson expound upon the Japanese-American internment experience and the need to eradicate such prejudices from our society which spawned the enactment of "Executive order 9066". This forum reviews the internment experience, draws upon the lessons learned by the nation and seeks to promote better racial harmony in the present day. This event took place on February 18, 1992, at Pauley Ballroom, University of California, Berkeley. 103 min. <b>DVD X697; vhs</b> <b>Video/C 2573</b><br>
