--- a/03_jQuery-Test/journalistsmovies.html
+++ b/03_jQuery-Test/journalistsmovies.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-<head><title>Journalists & the Media in the Movies: UC Berkeley Media Resources Center</title><script language="JavaScript" type="text/javascript"><!--
-function loadit(form, win) {
-win.location.href = form.menu.options[form.menu.selectedIndex].value  }  // --></script><link rel="stylesheet" type="text/css" href="../conversion.css">
+<head><title>Journalists & the Media in the Movies: UC Berkeley Media Resources Center</title><link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
 <body>
 <div id="dvData">
 
-<h2>Journalists & the Media in the Movies</h2><dl>
-<dd><dl>
-<dd data-sortby="9">Bibliography on this topic: </dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/journalistsbib.html">Journalists and the Media in the MoviesЖ</dd>
-</dl>
-</dd>
-</dl>
+<h2>Journalists & the Media in the Movies</h2>
 <dl>
 <dt><b>Absence of Malice</b> (1981)</dt>
 <dd>Directed by Sydney Pollack. Cast: Paul Newman, Sally Field, Bob Balaban, Melinda Dillon, Luther Adler, Barry Primus, Josef Sommer, John Harkins, Don Hood, Wilford Brimley. Megan, an ambitious newspaper reporter, based on information from an FBI investigator, writes a scathing article that implicates Gallagher, a reclusive business-owner in the recent disappearance of a labor leader. When Gallagher confronts Megan and sets her straight, the two team together to prove his innocence. 117 min. <b>DVD 2331</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0081974/">Credits and other information from the Internet Movie DatabaseЖ</dd>
@@ -329,10 +321,7 @@ win.location.href = form.menu.options[form.menu.selectedIndex].value  }  // --><
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0829459/">Credits and other information from the Internet Movie DatabaseЖ<br>
 </dd>
 </dl>
-<dl>
-<dt><b>Murphy Brown</b></dt>
-<dd>SEE Ѭ href="http://www.lib.berkeley.edu/MRC/tv.html#murphybrown">TV/ComedyЖ</dd>
-</dl>
+
 <dl>
 <dt><b>Natural Born Killers</b> (1994)</dt>
 <dd>Directed by Oliver Stone. Performers: Woody Harrelson, Juliette Lewis, Robert Downey, Jr., Tommy Lee Jones, Tom Sizemore, Rodney Dangerfield. A frenetic, bloody look at mass murder and the mass media. Fugitive lovers Mickey and Mallory Knox embark on a record-breaking, exceptionally gory killing spree that captivates the sensation-hungry tabloid media. Their fame is ensured by one newsman, Wayne Gale, and even the duo's eventual capture by the police only increases their notoriety, as Gale develops a plan for a Super Bowl Sunday interview that Mickey and Mallory twist to their own advantage. 118 min. <b>DVD 773</b></dd>
@@ -637,40 +626,6 @@ win.location.href = form.menu.options[form.menu.selectedIndex].value  }  // --><
 <dd>â€¢149;Rayner, Jonathan (Jonathan R.) <b>The films of Peter Weir</b> New York : Continuum, c2003. (MAIN: PN1998.3.W44 R39 2003)</dd>
 </dl>
 <br></dd>
-</dl><dl>
-<dd> <script language="JavaScript" type="text/javascript">
-<!--
-var SymRealOnLoad;
-var SymRealOnUnload;function SymOnUnload()
-{
-  window.open = SymWinOpen;
-  if(SymRealOnUnload != null)
-     SymRealOnUnload();
-}function SymOnLoad()
-{
-  if(SymRealOnLoad != null)
-     SymRealOnLoad();
-  window.open = SymRealWinOpen;
-  SymRealOnUnload = window.onunload;
-  window.onunload = SymOnUnload;
-}SymRealOnLoad = window.onload;
-window.onload = SymOnLoad;//--></script>  <script language="JavaScript" type="text/javascript">
-<!--
-var SymRealOnLoad;
-var SymRealOnUnload;function SymOnUnload()
-{
-  window.open = SymWinOpen;
-  if(SymRealOnUnload != null)
-     SymRealOnUnload();
-}function SymOnLoad()
-{
-  if(SymRealOnLoad != null)
-     SymRealOnLoad();
-  window.open = SymRealWinOpen;
-  SymRealOnUnload = window.onunload;
-  window.onunload = SymOnUnload;
-}SymRealOnLoad = window.onload;
-window.onload = SymOnLoad;//--></script>     </dd>
 </dl>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
