--- a/03_jQuery-Test/katrina.html
+++ b/03_jQuery-Test/katrina.html
@@ -1,32 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-<head><title>Hurricane Katrina: Media Resources Center, UC Berkeley</title><script language="JavaScript" type="text/javascript">  <!--
-function loadit(form, win) {
-win.location.href = form.menu.options[form.menu.selectedIndex].value  }  // --></script><link rel="stylesheet" type="text/css" href="../conversion.css">
+<head><title>Hurricane Katrina: Media Resources Center, UC Berkeley</title></script><link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
 <body>
 <div id="dvData">
 
 <h2>Hurricane Katrina</h2>
-</td>
-</tr><tr>
-<td valign="top"><img src="http://www.lib.berkeley.edu/MRC/sideclap.gif"><br>
-Ѭ href="http://www.lib.berkeley.edu/MRC/level2.html"><img src="http://www.lib.berkeley.edu/MRC/side-home.gif" border="0">Ж<br>
-Ѭ href="http://www.lib.berkeley.edu/MRC/about.html"><img src="http://www.lib.berkeley.edu/MRC/side-about.gif" border="0">Ж<br>
-Ѭ href="http://www.lib.berkeley.edu/MRC/access.html"><img src="http://www.lib.berkeley.edu/MRC/side-access.gif" border="0">Ж<br>
-<img src="http://www.lib.berkeley.edu/MRC/side-coll.gif" border="0"><br>
-Ѭ href="http://www.lib.berkeley.edu/MRC/moviedb.html"><img src="http://www.lib.berkeley.edu/MRC/side-movie.gif" border="0">Ж<br>
-Ѭ href="http://www.lib.berkeley.edu/MRC/tv.html"><img src="http://www.lib.berkeley.edu/MRC/side-tv.gif" border="0">Ж<br>
-Ѭ href="http://www.lib.berkeley.edu/MRC/FilmBibMenu.html"><img src="http://www.lib.berkeley.edu/MRC/side-bib.gif" border="0">Ж<br>
-Ѭ href="http://www.lib.berkeley.edu/Catalogs/"><img src="http://www.lib.berkeley.edu/MRC/side-cat.gif" border="0">Ж<br>
-Ѭ href="http://www.lib.berkeley.edu/MRC/filmstudies/index.html"><img src="http://www.lib.berkeley.edu/MRC/side-filmst.gif" border="0">Ж<br></td>
-<td valign="top" width="500"><dl>
-<dd><dl>
-<dd data-sortby="9">See also:</dd>
-<dd>â€¢149;Walker, Janet. "Moving testimonies and the geography of suffering: Perils and fantasies of belonging after Katrina." <i>Continuum: Journal of Media & Cultural Studies;</i> Feb2010, Vol. 24 Issue 1, p47-64, 18p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=47760497&site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
-</dl>
-</dd>
-</dl>
+
 <dl>
 <dt><b>The Axe in the Attic</b></dt>
 <dd>In the aftermath of Hurricane Katrina, two filmmakers, drawn together by outrage, take a sixty-day road trip from New England to New Orleans. Along the way they meet evacuees and witness the loss, dignity, perseverance and humor of people who have become exiles in their own country. The breakdown of trust between a government and its citizens, the influence of race, class, and gender, as well as the ethics of documentary filmmaking itself, form the backdrop for this universal story of the search for home. Directed, and written by Lucia Small and Ed Pincus. 2007. 110 min. <b>DVD X195</b><dl>
@@ -139,10 +119,7 @@ win.location.href = form.menu.options[form.menu.selectedIndex].value  }  // --><
 <dd>â€¢149;Venice Film Festival - Human Rights Film Network Award; Venice Horizons Documentary Award</dd>
 </dl></dd>
 </dl>
-<dl>
-<dt></dt>
-</dl>
-Last update 02/03/12[gh]</div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
 <script src="../exportCSV.js"></script>
