--- a/03_jQuery-Test/koreanamvid.html
+++ b/03_jQuery-Test/koreanamvid.html
@@ -5,18 +5,9 @@
 </head>
 <body>
 <div id="dvData">
-
-<img src="http://www.lib.berkeley.edu/MRC/asianam.gif"><br>
-<h3>Korean Americans</h3><dl>
-<dd data-sortby="9">See also the following MRC Videographies:</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/EthnicImagesVid.html">The Movies, Race, EthnicityЖ (for cinema works by Asian American filmmakers or films with images of Asian Americans</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/mixedracevid.html">People of Mixed Race - Interracial Marriage/DatingЖ</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/CJKVid.html">China, Japan, Korea, & Pacific IslandsЖ</dd>
-</dl>
+<h1>Asian, Pacific, and South Asian American Studies</h1>
+<h3>Korean Americans</h3>
 <dl>
-<dd data-sortby="9">See also the following MRC Videographies:</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/EthnicImagesVid.html">The Movies, Race, EthnicityЖ (for cinema works by Asian American filmmakers or films with images of Asian Americans</dd>
-</dl><dl>
 <dt><b>Arirang.</b></dt>
 <dd>An extensive documentary of the history of Korean American immigration to the United States. Pt. 1 covers early Korean immigration, beginning with a three-year period starting in 1903 when more than 7,000 Koreans left their strife-torn homeland for new lives on the sugar plantations of Hawaii. Pt. 2 explores the expansion of Korean immigration after the Korean War and changes in U.S. immigration law during the 1960s. 47 min. covers early Korean immigration, beginning with a three-year period starting in 1903 when more than 7,000 Koreans left their strife-torn homeland for new lives on the sugar plantations of Hawaii. Pt. 2 explores the expansion of Korean immigration after the Korean War and changes in U.S. immigration law during the 1960s. Written, produced and directed by Tom Coffman. c2003. 112 min. DVD 2245</dd>
 </dl>
@@ -109,7 +100,7 @@
 <dd>A short photo-essay by a Korean-American woman adopted by an American family as a child who returns to the Korean orphanage where she was first brought to find out about her Korean background and identity. A film by Karen Me Kyung MucKenhirn 9 min. <b>Video/C 7584</b></dd>
 </dl>
 <dl>
-<dt><b>Comic Relief</b> Ѭ href="http://www.lib.berkeley.edu/MRC/tv.html#Comedy">See TV ComedyЖ</dt>
+
 <dt><b>[Cho, Margaret] Notorious C.H.O.</b> (2002)</dt>
 <dd>Filmed live in Seattle. Margaret Cho, a comedian in teh spirit of Lenny Bruce, Richard Pryor and George Carlin, is known as much for her raunchy humor as for her enormous contributions as a social equalizer. 95 min. <b>DVD 2854</b></dd>
 </dl>
