--- a/03_jQuery-Test/labormovies.html
+++ b/03_jQuery-Test/labormovies.html
@@ -4,18 +4,8 @@
 <body>
 <div id="dvData">
 
-<h3><b>Labor Themes in the Movies and on TV</b></h3><dl>
-<dd>
-<dl>
-<dd data-sortby="9">See also:</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/corporationsmovies.html">Corporations, Wall Street, and Sundry Capitalism in the MoviesЖ</dd>
-</dl>
-<dl>
-<dd data-sortby="9">Bibliography on this topic: </dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/labormoviesbib.html">Labor Themes in the MoviesЖ</dd>
-</dl>
-</dd>
-</dl>
+<h3><b>Labor Themes in the Movies and on TV</b></h3>
+
 <dl>
 <dt><b>Arsenal</b> (Soviet Union, 1928-29)</dt>
 <dd>Directed by Alexander Dovzhenko. Based on an actual incident, this is a dramatic account of the Ukraine from the First World War through the February and October Revolutions, to the suppression of a workers' revolt in 1918. Dovzhenko presents harsh, realistic scenes of Czarist brutality and war's destruction, but his juxtapositions of the Russian workers and peasants are both impressionistic and symbolic. 75 min. <b>DVD 8448; vhs 999:2101</b> (digitally mastered)<li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0019649/">Credits and other information from the Internet Movie DatabaseЖ<dl>
@@ -610,7 +600,7 @@
 </dl>
 <dl>
 <dt><b>Pay Day</b> (1922)</dt>
-<dd>Directed by Charlie Chaplin. Cast: Charlie Chaplin, Phyllis Allen, Mack Swain. Charlie is an expert bricklayer. He has lots of fun and work and enjoys himself greatly while at the saloon. As he leaves work his wife takes the pay he has hidden in his hat. But he steals her purse so he can go out for the evening. He has a terrible time getting home on a very rainy night. When he does so he finds his wife waiting for him with a rolling pin. 26 min.</dd>
+<dd>Directed by Charlie Chaplin. Cast: Charlie Chaplin, Phyllis Allen, Mack Swain. Charlie is an expert bricklayer. He has lots of fun and work and enjoys himself greatly while at the saloon. As he leaves work his wife takes the pay he has hidden in his hat. But he steals her purse so he can go out for the evening. He has a terrible time getting home on a very rainy night. When he does so he finds his wife waiting for him with a rolling pin. 26 min. DVD 235</dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0013486/">Credits and information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
@@ -697,7 +687,7 @@
 <dl>
 <dt><b>Telling Tales</b>(UK, 1978)</dt>
 <dd>Directed by Richard Woolley. Cast: Bridget Ashburn, Stephen Trafford, Patricia Donovan, James Woolley. "Telling tales is about the failing marriage of an industrialist and his wife, about the industrialist's wish to sell his company to a colleague, Paul Roberts, and about the terminally ill wife of Paul, Ingrid. It is also about the shop steward organizing a strike at Paul's factory that jeopardizes the deal with the industrialist, and about the wife of the shop steward, who happens to clean and cook for the industrialist. A network of intertwined tales told in different ways, and for very different motives, by the main protagonists." 90 min.</dd>
-<dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt1863396/">Credits and other information from the Internet Movie DatabaseЖ</dd>
+<dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt1863396/">Credits and other information from the Internet Movie DatabaseЖ DVD X6263</dd>
 </dl>
 <dl>
 <dt><b>10,000 Black Men Named George</b> (2002)</dt>
