--- a/03_jQuery-Test/language.html
+++ b/03_jQuery-Test/language.html
@@ -4,13 +4,7 @@
 </head>
 <body>
 <div id="dvData">
-Ж
-
-<h3>Language and Communication</h3><dl>
-<dd data-sortby="9">See also the following MRC Videographies:</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/LifeSciVid.html">Life SciencesЖ</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/PsychVid.html">PsychologyЖ</dd>
-</dl>
+<h3>Language and Communication</h3>
 <dl>
 <dt><b>Adventure of English: 500 A.D. to 2000 A.D.</b></dt>
 <dd>2004.</dd>
@@ -399,7 +393,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 </dl>
 <dl>
 <dt><b>Signs of the Apes, Songs of the Whales</b></dt>
-<dd>A segment from the television program: Nova. Investigates various research into language development in apes and whales, and explores the way animals and man may communicate. 57 min. NRLF B 4 175 402</dd>
+<dd>A segment from the television program: Nova. Investigates various research into language development in apes and whales, and explores the way animals and man may communicate. 57 min. Video/C 726</dd>
 </dl>
 <dl>
 <dt><b>Spanish-speakers and Bilingualism.</b></dt>
@@ -511,12 +505,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 
 </dd>
 </dl>
-<dl>
-<dt></dt>
-</dl>
-Ѭ href="http://www.lib.berkeley.edu/MRC/leaderpage.html">â€¢149;<br>
-Ж Ѭ href="http://www.lib.berkeley.edu/MRC/commentform.html">The Media Resources Center.Ж<br>
-Last update 09/24/13[gt]</div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
 <script src="../exportCSV.js"></script>
