--- a/03_jQuery-Test/medhealth.html
+++ b/03_jQuery-Test/medhealth.html
@@ -836,7 +836,7 @@ Seeing death and being seen / Jim Goldberg -- When death becomes plausible / San
 </dl>
 <dl>
 <dt><b>The Gift.</b></dt>
-<dd>Documents the phenomenon of deliberate HIV infection. The film follows the stories of two "bug chasers" who sought out "the gift" of HIV infection. Also interviewed are AIDS activist and author, Walt Odets, and HIV+ and HIV- men. The film explores the normalization and glamorization of HIV/AIDS and discusses the isolation and division caused by HIV status in the gay community. Bonus feature: Does anyone die of AIDS anymore? (26 min., 2002). Produced and directed by Louise Hogarth. 2002. 62 min. D<b>VD 5027</b></dd>
+<dd>Documents the phenomenon of deliberate HIV infection. The film follows the stories of two "bug chasers" who sought out "the gift" of HIV infection. Also interviewed are AIDS activist and author, Walt Odets, and HIV+ and HIV- men. The film explores the normalization and glamorization of HIV/AIDS and discusses the isolation and division caused by HIV status in the gay community. Bonus feature: Does anyone die of AIDS anymore? (26 min., 2002). Produced and directed by Louise Hogarth. 2002. 62 min. <b>DVD 5027</b></dd>
 </dl>
 <dl>
 <dt><b>HIV/AIDS: A Challenge To Us All. 1: Educating Our Children: How To Speak with Young Children About HIV/AIDS</b></dt>
