--- a/03_jQuery-Test/music.html
+++ b/03_jQuery-Test/music.html
@@ -5,7 +5,7 @@
 <body>
 <div id="dvData">
 
-<h3>Musical Traditions of the World</h3><h2>This is a static page that is no longer maintained</h2>
+<h3>Musical Traditions of the World</h3>
 Ж
 <dl>
 <dd>Contents:<br>
