--- a/03_jQuery-Test/philosophy.html
+++ b/03_jQuery-Test/philosophy.html
@@ -488,7 +488,7 @@ Listen to it with Real Player</dd>
 <dl>
 <dt><b>[Wittgenstein, Ludwig] Wittgenstein.</b> (1993)</dt>
 <dd>Directed by Derek Jarman. A surreal and fanciful biography of the Viennese philosopher Ludwig Wittgenstein, who strove to define and teach insights on communication and the powers and limits of language. "Wittgenstein is shown as a boy living a repressive youth, demonstrated by his family appearing in Roman togas. When Wittgenstein leaves to study under Bertrand Russell at Cambridge, he begins to investigate language and apply the strictures and constructs of language to philosophical study. The subject of Wittgenstein's homosexuality is depicted when, after World War I, he falls in love with a poor philosophy student, Johnny (Kevin Collins). Also portrayed is Wittgenstein's death at an early age from prostate cancer." -- Paul Brenner [Ѭ href="http://allmovie.com/">All-Movie GuideЖ]. 75 min. <b>Video/C 999:1155</b><br><li>â€¢149;Ѭ href="http://us.imdb.com/title?Wittgenstein+(1993)">Credits and other information from the Internet Movie DatabaseЖ</dd>
-<dd><img src="http://www.lib.berkeley.edu/MRC/blinks.gif"> Ѭ href="http://www.mrqe.com/lookup?wittgenstein">Movie Review Query EngineЖ<br>
+<dd>Links to full-text reviews:  Ѭ href="http://www.mrqe.com/lookup?wittgenstein">Movie Review Query EngineЖ<br>
 </dd>
 </dl>
 <dl>
