--- a/03_jQuery-Test/serials.html
+++ b/03_jQuery-Test/serials.html
@@ -390,9 +390,9 @@
 <dd>For descriptions of individual films in this series SEE Ѭ href="http://www.lib.berkeley.edu/MRC/GayVid2.html">LGBT Representations in the MoviesЖ</dd>
 <dd>â€¢149;<b>La Cage Aux Folles.</b> (France / Italy, 1978)</dd>
 <dd>Directed by Edouard Molinaro. Cast: Ugo Tognazzi, Michel Serrault, Michel Galabru, Claire Maurier, Remi Laurent, Carmen Scarpitti, Benny Luke, Luisa Maneri. <b>DVD 782</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0077288/">Credits and other information from the Internet Movie DatabaseЖ</dd>
-<dd data-sortby="9">Reviews and articles:</dd>
 </dl>
-<dl>
+<dl><dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Sikov, Ed. "Homosexuals, Bandits, and Gangsters: Gay Images in La Cage aux Folles." <i>Cineaste</i>, vol. 11 no. 4. 1982. pp: 30-35.</dd>
 <dd>â€¢149;Tavernier-Courbin, Jacqueline. "La Cage aux Folles as Comedy of Manners: From the Play to the Film." <i>Thalia: Studies in Literary Humor</i>, vol. 7 no. 2. 1984 Fall-Winter. pp: 44-50.</dd>
 </dl>
