--- a/03_jQuery-Test/teenpix.html
+++ b/03_jQuery-Test/teenpix.html
@@ -7,7 +7,7 @@
 <!--   METADATA using the Dublin Core  -->
 
 <h3>Children, Teens (and Post-teens), and Families<br>
-in the Movies & Television</h3><p>Ж</p>
+in the Movies & Television</h3>
 <p>Contents:</p>
 <dl>
 <dd>â€¢149;Ѭ href="#teens">TeensЖ
@@ -1099,7 +1099,7 @@ in the Movies & Television</h3><p>Ж</p>
 <dd>â€¢149;Toronto International Film Festival - International Critics' Award</dd>
 <dd>â€¢149;Venice Film Festival - Best Actor (River Phoenix)</dd>
 </dl>
-<p>Ѭ href="http://www.lib.berkeley.edu/MRC/GayBib.html#idaho"><img align="top" img="" src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</p>
+
 </dd>
 </dl>
 <dl>
@@ -2908,7 +2908,7 @@ Reviews and articles: </dt>
 <dt><b>Zappa</b> (Denmark, 1983)</dt>
 <dd>Directed by Bille August. 'Zappa,' the prequel to 'Twist + Shout,' (on the same DVD) is the story of three teenagers in 1960s Copenhagen each from different backgrounds: the manipulative upperclass rich kid Steen, clean-cut middleclass boy Bjorn and the lowerclass overweight prankster Mulle. 103 min. <b>DVD 2564</b></dd>
 <dd>â€¢149;Ѭ href="%20http://us.imdb.com/title/tt0088445/">Credits and other information from the Internet Movie DatabaseЖ
-<p>Ж</p>
+
 </dd>
 </dl>
 <dl>
