--- a/03_jQuery-Test/EthnographyVid.html
+++ b/03_jQuery-Test/EthnographyVid.html
@@ -2748,9 +2748,9 @@ SEE Ѭ href="http://www.lib.berkeley.edu/MRC/IndigenousVid.html">Indigenous Peop
 <dd>â€¢149; Ѭ href="http://www.newday.com/films/The_Blinking_Madonna.html">Description of the video from New Day Films catalogЖ</dd>
 </dl>
 <dl>
-<dd data-sortby="9">Reviews and articles:</dd>
 </dl>
-<dl>
+<dl><dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Martin, James. The Blinking Madonna and Other Miracles. (movie reviews) <i>America</i> v176, n21 (June 21, 1997):23.</dd>
 <dd>â€¢149; Garofalo, Denise A. "The Blinking Madonna and Other Miracles." (video recording reviews) <i>Library Journal</i> v122, n9 (May 15, 1997):115 (2 pages).</dd>
 <dd>â€¢149; James, Caryn. "The Blinking Madonna and Other Miracles." (video recording reviews) <i>New York Times</i> v146 (Mon, May 12, 1997):B2(N), C14(L), col 2, 7 col in.</dd>
